--- a/Language/Vi/Settings/Comment/GodCity.xml
+++ b/Language/Vi/Settings/Comment/GodCity.xml
@@ -1,16 +1,16 @@
 <Texts Type="Other">
 	<List>
 		<Text Name="GodCityGod_Gong_1">
-			<Title>แดนเทวะ -  เทพวิชาอัสนีบาตเก้าสวรรค์</Title>
-			<Desc>แดนเทวะที่ถูกสร้างโดยเทพวิชาอัสนีบาตเก้าสวรรค์</Desc>
+			<Title>Thần Quốc - Cửu Thiên Lôi Pháp</Title>
+			<Desc>Thần Quốc được tạo ra bởi Cửu Thiên Lôi Pháp</Desc>
 		</Text>
 		<Text Name="GodCityGod_Gong_2">
-			<Title>แดนเทวะ -  เทพวิชาวิถีฟ้าแปดสวรรค์</Title>
-			<Desc>แดนเทวะที่ถูกสร้างโดยเทพวิชาวิถีฟ้าแปดสวรรค์</Desc>
+			<Title>Thần Quốc - Bát Thiên Đạo Pháp</Title>
+			<Desc>Thần Quốc được tạo ra bởi Bát Thiên Đạo Pháp</Desc>
 		</Text>
 		<Text Name="GodCityGod_Gong_3">
-			<Title>แดนเทวะ -  เทพวิชาสิบมหานรก</Title>
-			<Desc>แดนเทวะที่ถูกสร้างโดยเทพวิชาสิบมหานรก</Desc>
+			<Title>Thần Quốc - Thập Đại Địa Ngục Pháp</Title>
+			<Desc>Thần Quốc được tạo ra bởi Thập Đại Địa Ngục Pháp</Desc>
 		</Text>
 	</List>
 </Texts>
