--- a/Language/Vi/Settings/Comment/Npc.xml
+++ b/Language/Vi/Settings/Comment/Npc.xml
@@ -1,43 +1,43 @@
 <Texts Type="Other">
 	<List>
 		<Text Name="NpcDiscipleOfJinDan">
-			<Notes>ความคิดเห็นเกี่ยวกับผู้ฝึกตนวิถีเซียน</Notes>
-			<Title>ผู้ฝึกตนวิถีเซียน</Title>
-			<Desc>ผู้บำเพ็จตนที่ฝึกฝนด้วยกฎแห่งแก่นทองคำในการแสวงหาวิถีความเป็นอมตะ แม้ว่าผู้ฝึกตนเส้นทางแห่งเซียนนั้นจะเลือกกฎที่ยาก แต่ก็เป็นกฎแห่งความยิ่งใหญ่ที่ช่วยให้ท่านเข้าใจโลกอย่างถ่องแท้ซึ่งจะนำไปสู่อิสระภาพอันสูงสุด แม้ว่าความแข็งแกร่งของแต่พวกเขาจะถูกจำกัด แต่พวกเขาก็สามารถสร้างค่ายกลขึ้นมาเพื่อร่วมพลังในการรับมือกับศัตรูได้ เหนือสิ่งอื่นใด พวกเขายังช่ำชองในการเล่นแร่แปรธาตุและเขียนยันต์อาคม เปลี่ยนแปลงกฎแห่งธรรมชาติด้วยเวทย์อัศจรรย์ต่างๆ ไม่ต้องสงสัยเลยว่าพวกเขาเป็นเสาหลักในโลกแห่งการบ่มเพาะ</Desc>
+			<Notes>Nhận xét về Tiên Tu</Notes>
+			<Title>Tiên Tu</Title>
+			<Desc>Tu sĩ tu luyện theo Kim Đan Đạo để tìm kiếm sự bất tử. Mặc dù con đường này khó khăn, nhưng nó là đại đạo giúp thấu hiểu thế giới và đạt được tự do tối thượng. Dù sức mạnh cá nhân có hạn, họ có thể lập trận pháp để hợp lực chống kẻ thù. Hơn nữa, họ tinh thông luyện đan, vẽ bùa, thay đổi quy luật tự nhiên bằng phép thuật kỳ diệu. Không nghi ngờ gì nữa, họ là trụ cột của giới tu chân.</Desc>
 		</Text>
 		<Text Name="NpcDiscipleOfGod">
-			<Notes>ความคิดเห็นเกี่ยวกับผู้ฝึกตนวิถีเทพ</Notes>
-			<Title>ผู้ฝึกตนวิถีเทพ</Title>
-			<Desc>ผู้บ่มเพาะที่รวบรวมพลังแห่งความศรัทธาจากผู้คนเพื่อแสวงหาวิถีแห่งทวยเทพ ถึงแม้ว่าพวกเขาจะทรงพลังเนื่องจากพวกเขาสามารถได้รับพลังอย่างไร้ขีดจำกัดจากความศรัทธาที่ไร้สิ้นสุด ทว่าพวกเขาจะสูญเสียอัตลักษณ์ของตนไปอย่างถาวรในกระบวนการเนื่องจากการถูกครอบงำโดยความศรัทธาและกลายเป็นเทพเจ้าที่บริสุทธิ์ไปในที่สุด</Desc>
+			<Notes>Nhận xét về Thần Tu</Notes>
+			<Title>Thần Tu</Title>
+			<Desc>Tu sĩ thu thập tín ngưỡng lực từ chúng sinh để theo đuổi Thần đạo. Mặc dù họ rất mạnh mẽ nhờ nguồn sức mạnh vô hạn từ tín ngưỡng, nhưng họ sẽ dần mất đi bản ngã trong quá trình đó do bị tín ngưỡng đồng hóa, cuối cùng trở thành một vị thần thuần túy.</Desc>
 		</Text>
 		<Text Name="NpcDiscipleOfBody">
-			<Notes>ความคิดเห็นเกี่ยวกับผู้ฝึกตนวิถีกายาอมตะ</Notes>
-			<Title>ผู้ฝึกตนวิถีกายา</Title>
-			<Desc>วิธีการบ่มเพาะจากยุคบรรพกาล ควบคุมแก่นชีพระหว่างสวรรค์และโลกเพื่อหล่อหลอมร่างกายมนุษย์ธรรมดาให้กลายเป็นกายาอมตะ ผู้ฝึกตนวิถีกายาอมตะนั้นจำเก่งในด้านการต่อสู้เนื่องจากพวกเขามุ่งเน้นไปที่การใช้กำลังกายในการฝึกฝน แม้แต่ผู้เริ่มต้นฝึกฝนยามเมื่อฝึกฝนกระบวนท่าเบื้องต้นก็ยังสามารถกลายเป็นผู้มีพลังในการต่อสู้ได้อย่างรวดเร็ว อย่างไรก็ตามวิธีการหลอมกายานั้นมุ่งเน้นไปที่ร่างกายของตนเองเท่านั้นนี่จึวทำให้ถึงแม้ว่าพวกเขาจะทำการดูดซับพลังงานจากระหว่างสวรรค์และโลกแต่กลับให้ผลตอบแทนเพียงเล็กน้อยเท่านั้น ส่งผลให้พวกเขานั้นฝึกฝนต่อไปได้ยาก และเมื่อเวลาผ่านไป ในที่สุดก็แสดงให้เห็นแล้วว่ามันเป็นการยากที่พวกเขาจะไปประชันกับผู้ฝึกตนเส้นทางแห่งเซียน ดังนั้นพวกเขาจึงค่อยๆ เสื่อมถอยลงไปตามกาลเวลา</Desc>
+			<Notes>Nhận xét về Thể Tu</Notes>
+			<Title>Thể Tu</Title>
+			<Desc>Phương pháp tu luyện từ thời thượng cổ, điều khiển tinh hoa thiên địa để rèn luyện cơ thể phàm trần thành bất hoại kim thân. Thể tu rất giỏi chiến đấu vì họ tập trung rèn luyện sức mạnh thể chất. Ngay cả người mới bắt đầu cũng có thể nhanh chóng có được sức chiến đấu. Tuy nhiên, phương pháp này chỉ tập trung vào bản thân, khiến việc hấp thụ năng lượng thiên địa kém hiệu quả, làm cho việc tu luyện về sau rất khó khăn. Theo thời gian, họ khó cạnh tranh với Tiên tu nên dần suy tàn.</Desc>
 		</Text>
 		<Text Name="NpcWaiMen">
-			<Notes>ความคิดเห็นเกี่ยวกับศิษย์สายนอก</Notes>
-			<Title>ปุถุชน</Title>
-			<Desc>บรรดาผู้ที่ไม่เคยเหยียบย่ำเข้าไปในโล่กแห่งการบ่มเพาะก็เป็นดั่งใบไม้ที่ถูกพัดไปพัดมาไปในช่วงเวลาที่ยากลำบาก</Desc>
+			<Notes>Nhận xét về đệ tử ngoại môn</Notes>
+			<Title>Phàm Nhân</Title>
+			<Desc>Những người chưa từng bước chân vào giới tu chân cũng giống như chiếc lá bị cuốn trôi trong thời kỳ khó khăn.</Desc>
 		</Text>
 		<Text Name="NpcDaNeng">
-			<Notes>ความคิดเห็นเกี่ยวกับปรมาจารย์</Notes>
-			<Title>ผู้ฝึกตนโบราณ</Title>
-			<Desc>ผู้ฝึกตนที่เข้าสู่การหลับไหลเนื่องจากความเหือดแห้งของปราณธรรมชาติในสมัยโบราณ บัดนี้ได้ตื่นขึ้นและปรากฏกายออกมาแล้ว พวกเขาเหล่านี้นั้นทรงพลังเป็นอย่างมาก</Desc>
+			<Notes>Nhận xét về Đại Năng</Notes>
+			<Title>Tu Sĩ Cổ Đại</Title>
+			<Desc>Những tu sĩ đã ngủ say do linh khí cạn kiệt vào thời thượng cổ, nay đã thức tỉnh và xuất hiện. Họ vô cùng mạnh mẽ.</Desc>
 		</Text>
 		<Text Name="NpcPuppet">
-			<Notes>ความคิดเห็นเกี่ยวกับหุ่นเชิด</Notes>
-			<Title>หุ่นเชิด</Title>
-			<Desc>หุ่นทรงมนุษย์ที่ถูกควบคุมโดยปราณเวทย์ พวกมันสามารถช่วยงานพื้นฐานได้</Desc>
+			<Notes>Nhận xét về Khôi Lỗi</Notes>
+			<Title>Khôi Lỗi</Title>
+			<Desc>Người nộm được điều khiển bằng pháp lực, có thể giúp làm các công việc cơ bản.</Desc>
 		</Text>
 		<Text Name="NpcZombie">
-			<Notes>ความคิดเห็นเกี่ยวกับผีดิบ</Notes>
-			<Title>ผีดิบ</Title>
-			<Desc>ด้วยฮวงจุ้ยที่เลวร้าย บางสิ่งได้กลายพันธ์ไปสู่สิ่งหนึ่งที่ไร้ความนึกคิดและกระหายเลือด</Desc>
+			<Notes>Nhận xét về Cương Thi</Notes>
+			<Title>Cương Thi</Title>
+			<Desc>Do phong thủy tồi tệ, một số thứ đã biến đổi thành quái vật vô tri và khát máu.</Desc>
 		</Text>
 		<Text Name="NpcTeacher">
-			<Notes>ความคิดเห็นเกี่ยวกับผู้ฝึกตนลึกลับ</Notes>
-			<Title>ผู้ฝึกตนลึกลับ</Title>
+			<Notes>Nhận xét về tu sĩ bí ẩn</Notes>
+			<Title>Tu Sĩ Bí Ẩn</Title>
 		</Text>
 	</List>
 </Texts>
