--- a/Language/Vi/Settings/Comment/SkillTree.xml
+++ b/Language/Vi/Settings/Comment/SkillTree.xml
@@ -1,72 +1,72 @@
 <Texts Type="Other">
 	<List>
 		<Text Name="PenetrateGong_1_Shui">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะสิบหกก้าวสู่เซียน</Title>
-			<Desc>ความลับของวิชาบ่มเพาะสิบหกก้าวสู่เซียนจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Thập Lục Tuyệt Thiên Quy Lục</Title>
+			<Desc>Bí mật của Thập Lục Tuyệt Thiên Quy Lục sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_2_Mu">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะหมื่นรังสรรค์สรรพวุธ</Title>
-			<Desc>ความลับของวิชาบ่มเพาะหมื่นวิถีกำเนิดสรรพวุธจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Cửu Chuyển Kim Đan Trực Chỉ</Title>
+			<Desc>Bí mật của Cửu Chuyển Kim Đan Trực Chỉ sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_3_Jin">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะเจ็ดวิถีกระบี่สังหาร</Title>
-			<Desc>ความลับของวิชาบ่มเพาะเจ็ดวิถีกระบี่สังหารจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Thất Sát Kiếm Quyết</Title>
+			<Desc>Bí mật của Thất Sát Kiếm Quyết sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_4_None">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะหยกอมตะไร้มลทิน</Title>
-			<Desc>ความลับของวิชาบ่มเพาะหยกอมตะไร้มลทินจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Thái Thượng Vô Tình Đạo</Title>
+			<Desc>Bí mật của Thái Thượng Vô Tình Đạo sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_5_Tu">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะปราณดึงสวรรค์</Title>
-			<Desc>ความลับของวิชาบ่มเพาะขโมยสวรรค์จะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Thâu Thiên Quyết</Title>
+			<Desc>Bí mật của Thâu Thiên Quyết sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_6_Huo">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะเทพโอสถปฐมกาล</Title>
-			<Desc>ความลับของวิชาบ่มเพาะกลั่นโอสถปฐมกาลจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Thái Nhất Phù Lục</Title>
+			<Desc>Bí mật của Thái Nhất Phù Lục sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_7_Huo">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะจิตสะบั้นใจ</Title>
-			<Desc>ความลับของวิชาบ่มเพาะสะบั้นอารมณ์จะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Ngọc Thanh Tiên Pháp</Title>
+			<Desc>Bí mật của Ngọc Thanh Tiên Pháp sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_8_Jin">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะกระบี่ทองคำตัดดารา</Title>
-			<Desc>ความลับของวิชาบ่มเพาะอลหม่านฟาดฟันจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Bắc Đẩu Động Tâm Hạo Nhiên Kiếm</Title>
+			<Desc>Bí mật của Bắc Đẩu Động Tâm Hạo Nhiên Kiếm sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_9_Mu">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะหกวิถีกำเนิดใหม่</Title>
-			<Desc>ความลับของวิชาบ่มเพาะหกวิถีกำเนิดใหม๋จะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Lục Đạo Luân Hồi</Title>
+			<Desc>Bí mật của Lục Đạo Luân Hồi sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_10_Huo">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะสุริยันเที่ยงแท้</Title>
-			<Desc>ความลับของวิชาบ่มเพาะสุริยันเที่ยงแท้จะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Tam Dương Tam Muội</Title>
+			<Desc>Bí mật của Tam Dương Tam Muội sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_11_Tu">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะกลั่นทานตะวัน</Title>
-			<Desc>ความลับของวิชาบ่มเพาะกลั่นทานตะวันจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Quỳ Hoa Luyện Thần</Title>
+			<Desc>Bí mật của Quỳ Hoa Luyện Thần sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_12_None">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะอักขระบรรพกาล</Title>
-			<Desc>ความลับของวิชาบ่มเพาะอักขระบรรพกาลจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Đa Bảo Diễn</Title>
+			<Desc>Bí mật của Đa Bảo Diễn sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateGong_13_None">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะหยินหยางผันแปร</Title>
-			<Desc>ความลับของวิชาบ่มเพาะหยินหยางผันแปร</Desc>
+			<Title>Lĩnh ngộ - Thái Hòa Thập Lục Động Thiên</Title>
+			<Desc>Bí mật của Thái Hòa Thập Lục Động Thiên sẽ được hiển thị tại trang này.</Desc>
 		</Text>
 		<Text Name="PenetrateDengXian">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะระดับสวรรค์</Title>
-			<Desc>ความลับส่วนหนึ่งของวิชาบ่มเพาะบรรพกาลที่ถูกส่งต่อๆ กันมาจากนักรบพเนจรจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Công Pháp Thiên Giai</Title>
+			<Desc>Một phần bí mật của công pháp thượng cổ được lưu truyền từ các tu sĩ lang thang sẽ được hiển thị tại đây.</Desc>
 		</Text>
 		<Text Name="PenetrateYuanShen">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะระดับวิญญาณปฐมกาล</Title>
-			<Desc>ความลับส่วนหนึ่งของวิชาบ่มเพาะวิญญาณปฐมกาลที่ถูกส่งต่อๆ กันมาจากนักรบพเนจรจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Công Pháp Nguyên Thần Giai</Title>
+			<Desc>Một phần bí mật của công pháp Nguyên Thần được lưu truyền từ các tu sĩ lang thang sẽ được hiển thị tại đây.</Desc>
 		</Text>
 		<Text Name="PenetrateJinDan">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะระดับแก่นทองคำ</Title>
-			<Desc>ความลับส่วนหนึ่งของวิชาบ่มเพาะระดับแก่นทองคำที่ถูกส่งต่อๆ กันมาจากนักรบพเนจรจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Công Pháp Kim Đan Giai</Title>
+			<Desc>Một phần bí mật của công pháp Kim Đan được lưu truyền từ các tu sĩ lang thang sẽ được hiển thị tại đây.</Desc>
 		</Text>
 		<Text Name="PenetrateFanSu">
-			<Title>ทำความเข้าใจ - วิชาบ่มเพาะระดับปฐพี</Title>
-			<Desc>ความลับส่วนหนึ่งของวิชาบ่มเพาะระดับปฐพีที่ถูกส่งต่อๆ กันมาจากนักรบพเนจรจะถูกแสดงในหน้านี้</Desc>
+			<Title>Lĩnh ngộ - Công Pháp Phàm Tục</Title>
+			<Desc>Một phần bí mật của công pháp phàm tục được lưu truyền từ các tu sĩ lang thang sẽ được hiển thị tại đây.</Desc>
 		</Text>
 	</List>
 </Texts>
