--- a/Language/Vi/Settings/Comment/Special.xml
+++ b/Language/Vi/Settings/Comment/Special.xml
@@ -1,24 +1,24 @@
 <Texts Type="Other">
 	<List>
 		<Text Name="SpecialZhen">
-			<Notes>ความคิดเห็นเกี่ยวกับค่ายกล</Notes>
-			<Title>ค่ายกล</Title>
-			<Desc>รวมพลังของคนหลายคนให้เป็นหนึ่งเดียว นั่นคือแนวคิดอันสูงสุดเกี่ยวกับวิถีแห่งค่ายกล</Desc>
+			<Notes>Nhận xét về Trận Pháp</Notes>
+			<Title>Trận Pháp</Title>
+			<Desc>Tập hợp sức mạnh của nhiều người thành một, đó là khái niệm tối cao của đạo trận pháp.</Desc>
 		</Text>
 		<Text Name="SpecialElixirGas">
-			<Notes>ความคิดเห็นเกี่ยวกับปราณหลอมโอสถ</Notes>
-			<Title>ปราณหลอมโอสถ</Title>
-			<Desc>ปราณหลอมโอสถในสำนัก</Desc>
+			<Notes>Nhận xét về Đan Khí</Notes>
+			<Title>Đan Khí</Title>
+			<Desc>Đan khí trong môn phái</Desc>
 		</Text>
 		<Text Name="SpecialSacrific">
-			<Notes>ความคิดเห็นเกี่ยวกับการเซ่นสังเวยอสูร</Notes>
-			<Title>การเซ่นสังเวยอสูร</Title>
-			<Desc>หน้าต่างการเซ่นสังเวยอสูร</Desc>
+			<Notes>Nhận xét về hiến tế quái vật</Notes>
+			<Title>Hiến tế quái vật</Title>
+			<Desc>Giao diện hiến tế quái vật</Desc>
 		</Text>
 		<Text Name="SpecialMutation">
-			<Notes>ความคิดเห็นเกี่ยวกับความโกลาหลแห่งสวรรค์</Notes>
-			<Title>ความโกลาหลแห่งสวรรค์</Title>
-			<Desc>เต๋าสวรรค์ในแดนนี้ได้เข้าสู่ช่วงสุดท้าย ยิ่งทำให้กฎสวรรค์ที่ปั่นป่วนอยู่แล้วไร้เสถียรภาพยิ่งขึ้น</Desc>
+			<Notes>Nhận xét về Thiên Đạo Hỗn Loạn</Notes>
+			<Title>Thiên Đạo Hỗn Loạn</Title>
+			<Desc>Thiên Đạo ở vùng đất này đã đi vào giai đoạn cuối, khiến quy luật vốn đã hỗn loạn càng trở nên bất ổn hơn.</Desc>
 		</Text>
 	</List>
 </Texts>
