--- a/Language/Vi/Settings/Comment/ZhenSlotSuit.xml
+++ b/Language/Vi/Settings/Comment/ZhenSlotSuit.xml
@@ -1,204 +1,204 @@
 <Texts Type="Other">
 	<List>
 		<Text Name="ZhenSlotSuitSlotSuit_1">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งกระบี่</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งกระบี่</Desc>
+			<Title>Đặc Tính Trận Pháp - Kiếm Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Kiếm Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_2">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งบัญญัติ</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งบัญญัติ</Desc>
+			<Title>Đặc Tính Trận Pháp - Pháp Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Pháp Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_3">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งคุณธรรม</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งคุณธรรม</Desc>
+			<Title>Đặc Tính Trận Pháp - Đạo Đức</Title>
+			<Desc>Đặc Tính Trận Pháp - Đạo Đức</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_4">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งความอ่อนโยน</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งความอ่อนโยน</Desc>
+			<Title>Đặc Tính Trận Pháp - Nhu Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Nhu Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_5">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งความสมดุล</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งความสมดุล</Desc>
+			<Title>Đặc Tính Trận Pháp - Cân Bằng</Title>
+			<Desc>Đặc Tính Trận Pháp - Cân Bằng</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_6">
-			<Title>อัตลักษณ์แห่งค่ายกล - สถานะสวรรค์</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - สถานะสวรรค์</Desc>
+			<Title>Đặc Tính Trận Pháp - Thiên Nhân</Title>
+			<Desc>Đặc Tính Trận Pháp - Thiên Nhân</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_7">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งปฐพี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งปฐพี</Desc>
+			<Title>Đặc Tính Trận Pháp - Thổ Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Thổ Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_8">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งอัสนี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งอัสนี</Desc>
+			<Title>Đặc Tính Trận Pháp - Lôi Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Lôi Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_9">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งวายุ</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งวายุ</Desc>
+			<Title>Đặc Tính Trận Pháp - Phong Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Phong Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_10">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งวารี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งวารี</Desc>
+			<Title>Đặc Tính Trận Pháp - Thủy Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Thủy Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_11">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งอัคคี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งอัคคี</Desc>
+			<Title>Đặc Tính Trận Pháp - Hỏa Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Hỏa Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_12">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งภูเขา</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งภูเขา</Desc>
+			<Title>Đặc Tính Trận Pháp - Sơn Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Sơn Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_13">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งทุ่งโล่ง</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งทุ่งโล่ง</Desc>
+			<Title>Đặc Tính Trận Pháp - Trạch Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Trạch Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_14">
-			<Title>อัตลักษณ์แห่งค่ายกล - รากสวรรค์</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - รากสวรรค์</Desc>
+			<Title>Đặc Tính Trận Pháp - Thiên Căn</Title>
+			<Desc>Đặc Tính Trận Pháp - Thiên Căn</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_15">
-			<Title>อัตลักษณ์แห่งค่ายกล - พายุอัสนี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - พายุอัสนี</Desc>
+			<Title>Đặc Tính Trận Pháp - Lôi Bão</Title>
+			<Desc>Đặc Tính Trận Pháp - Lôi Bão</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_16">
-			<Title>อัตลักษณ์แห่งค่ายกล - เพลิงนภาแห่งดวงตะวัน</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - เพลิงนภาแห่งดวงตะวัน</Desc>
+			<Title>Đặc Tính Trận Pháp - Thái Dương Thiên Hỏa</Title>
+			<Desc>Đặc Tính Trận Pháp - Thái Dương Thiên Hỏa</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_17">
-			<Title>อัตลักษณ์แห่งค่ายกล - สายลมอันอ่อนโยน</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - สายลมอันอ่อนโยน</Desc>
+			<Title>Đặc Tính Trận Pháp - Nhu Phong</Title>
+			<Desc>Đặc Tính Trận Pháp - Nhu Phong</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_18">
-			<Title>อัตลักษณ์แห่งค่ายกล - อัสนีกึกก้อง</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - อัสนีกึกก้อง</Desc>
+			<Title>Đặc Tính Trận Pháp - Chấn Lôi</Title>
+			<Desc>Đặc Tính Trận Pháp - Chấn Lôi</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_19">
-			<Title>อัตลักษณ์แห่งค่ายกล - เทือกเขาไร้ขอบเขต </Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - เทือกเขาไร้ขอบเขต</Desc>
+			<Title>Đặc Tính Trận Pháp - Vô Tận Sơn Mạch</Title>
+			<Desc>Đặc Tính Trận Pháp - Vô Tận Sơn Mạch</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_20">
-			<Title>อัตลักษณ์แห่งค่ายกล - สายธารไร้จุดจบ</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - สายธารไร้จุดจบ</Desc>
+			<Title>Đặc Tính Trận Pháp - Vô Tận Hà Lưu</Title>
+			<Desc>Đặc Tính Trận Pháp - Vô Tận Hà Lưu</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_21">
-			<Title>อัตลักษณ์แห่งค่ายกล - ปฐมบทแห่งสวรรค์&amp;ปฐพี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - ปฐมบทแห่งสวรรค์&amp;ปฐพี</Desc>
+			<Title>Đặc Tính Trận Pháp - Thiên Địa Sơ Khai</Title>
+			<Desc>Đặc Tính Trận Pháp - Thiên Địa Sơ Khai</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_22">
-			<Title>อัตลักษณ์แห่งค่ายกล - จุดสื้นจุดของภูผา&amp;สายน้ำ</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จุดสื้นจุดของภูผา&amp;สายน้ำ</Desc>
+			<Title>Đặc Tính Trận Pháp - Sơn Cùng Thủy Tận</Title>
+			<Desc>Đặc Tính Trận Pháp - Sơn Cùng Thủy Tận</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_23">
-			<Title>อัตลักษณ์แห่งค่ายกล - ต้นกำเนิดแห่งการสรรค์สร้าง </Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - ต้นกำเนิดแห่งการสรรค์สร้าง</Desc>
+			<Title>Đặc Tính Trận Pháp - Tạo Hóa Chi Nguyên</Title>
+			<Desc>Đặc Tính Trận Pháp - Tạo Hóa Chi Nguyên</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_24">
-			<Title>อัตลักษณ์แห่งค่ายกล - ปฏิปักแห่งอัคคี&amp;วารี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - ปฏิปักแห่งอัคคี&amp;วารี</Desc>
+			<Title>Đặc Tính Trận Pháp - Thủy Hỏa Bất Dung</Title>
+			<Desc>Đặc Tính Trận Pháp - Thủy Hỏa Bất Dung</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_25">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งอัคคี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งอัคคี</Desc>
+			<Title>Đặc Tính Trận Pháp - Hỏa Ý</Title>
+			<Desc>Đặc Tính Trận Pháp - Hỏa Ý</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_26">
-			<Title>อัตลักษณ์แห่งค่ายกล - การเสื่อมโทรมของธรรมชาติ</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - การเสื่อมโทรมของธรรมชาติ</Desc>
+			<Title>Đặc Tính Trận Pháp - Thiên Nhiên Suy Thoái</Title>
+			<Desc>Đặc Tính Trận Pháp - Thiên Nhiên Suy Thoái</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_27">
-			<Title>อัตลักษณ์แห่งค่ายกล - ปฐมกาล</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - ปฐมกาล</Desc>
+			<Title>Đặc Tính Trận Pháp - Thái Cổ</Title>
+			<Desc>Đặc Tính Trận Pháp - Thái Cổ</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_28">
-			<Title>อัตลักษณ์แห่งค่ายกล - ความเวิ้งว้างอันยิ่งใหญ่ </Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - ความเวิ้งว้างอันยิ่งใหญ่</Desc>
+			<Title>Đặc Tính Trận Pháp - Đại Hoang</Title>
+			<Desc>Đặc Tính Trận Pháp - Đại Hoang</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_1">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งโมหะฟาดฟัน</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งโมหะฟาดฟัน</Desc>
+			<Title>Đặc Tính Trận Pháp - Si Mê Trảm</Title>
+			<Desc>Đặc Tính Trận Pháp - Si Mê Trảm</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_2">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งเจ็ดกระบี่ล่าสังหาร</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งเจ็ดกระบี่ล่าสังหาร</Desc>
+			<Title>Đặc Tính Trận Pháp - Thất Sát Kiếm</Title>
+			<Desc>Đặc Tính Trận Pháp - Thất Sát Kiếm</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_3">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งค่ายกลคงกะพัน</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งค่ายกลคงกะพัน</Desc>
+			<Title>Đặc Tính Trận Pháp - Kim Cương Trận</Title>
+			<Desc>Đặc Tính Trận Pháp - Kim Cương Trận</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_4">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งกฏเทวะ</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งกฏเทวะ</Desc>
+			<Title>Đặc Tính Trận Pháp - Thiên Đạo Quy Tắc</Title>
+			<Desc>Đặc Tính Trận Pháp - Thiên Đạo Quy Tắc</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_5">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งมังกรที่แท้จริง</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งมังกรที่แท้จริง</Desc>
+			<Title>Đặc Tính Trận Pháp - Chân Long</Title>
+			<Desc>Đặc Tính Trận Pháp - Chân Long</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_6">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งวิหคเพลิงเทวะ</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งวิหคเพลิงเทวะ</Desc>
+			<Title>Đặc Tính Trận Pháp - Phượng Hoàng</Title>
+			<Desc>Đặc Tính Trận Pháp - Phượng Hoàng</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_7">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งหยินหยาง</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งหยินหยาง</Desc>
+			<Title>Đặc Tính Trận Pháp - Âm Dương</Title>
+			<Desc>Đặc Tính Trận Pháp - Âm Dương</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_8">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งจันทราเหมันต์</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งจันทราเหมันต์</Desc>
+			<Title>Đặc Tính Trận Pháp - Hàn Nguyệt</Title>
+			<Desc>Đặc Tính Trận Pháp - Hàn Nguyệt</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_9">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งกระบี่อเวจี</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งกระบี่อเวจี</Desc>
+			<Title>Đặc Tính Trận Pháp - A Tỳ Kiếm</Title>
+			<Desc>Đặc Tính Trận Pháp - A Tỳ Kiếm</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_10">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งพฤกษาบูรพา</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งพฤกษาบูรพา</Desc>
+			<Title>Đặc Tính Trận Pháp - Đông Phương Ất Mộc</Title>
+			<Desc>Đặc Tính Trận Pháp - Đông Phương Ất Mộc</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_SpZhen_11">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งการหลอมรวม</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งการหลอมรวม</Desc>
+			<Title>Đặc Tính Trận Pháp - Dung Hợp</Title>
+			<Desc>Đặc Tính Trận Pháp - Dung Hợp</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_1">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งม่านบังตะวัน</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งม่านบังตะวัน</Desc>
+			<Title>Đặc Tính Trận Pháp - Già Thiên</Title>
+			<Desc>Đặc Tính Trận Pháp - Già Thiên</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_2">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งคุนหลุน</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งคุนหลุน</Desc>
+			<Title>Đặc Tính Trận Pháp - Côn Luân</Title>
+			<Desc>Đặc Tính Trận Pháp - Côn Luân</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_3">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งป้อมสวรรค์</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งป้อมสวรรค์</Desc>
+			<Title>Đặc Tính Trận Pháp - Thiên Bảo</Title>
+			<Desc>Đặc Tính Trận Pháp - Thiên Bảo</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_4">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งเมฆาม่วง</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งเมฆาม่วง</Desc>
+			<Title>Đặc Tính Trận Pháp - Tử Hà</Title>
+			<Desc>Đặc Tính Trận Pháp - Tử Hà</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_5">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งเอกภาพเที่ยงแท้</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งเอกภาพเที่ยงแท้</Desc>
+			<Title>Đặc Tính Trận Pháp - Thái Nhất</Title>
+			<Desc>Đặc Tính Trận Pháp - Thái Nhất</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_6">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งบัวสีคราม</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งบัวสีคราม</Desc>
+			<Title>Đặc Tính Trận Pháp - Thanh Liên</Title>
+			<Desc>Đặc Tính Trận Pháp - Thanh Liên</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_7">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งตะวันลับฟ้า</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งตะวันลับฟ้า</Desc>
+			<Title>Đặc Tính Trận Pháp - Lạc Nhật</Title>
+			<Desc>Đặc Tính Trận Pháp - Lạc Nhật</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_8">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งร้อยแมลง</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งร้อยแมลง</Desc>
+			<Title>Đặc Tính Trận Pháp - Bách Trùng</Title>
+			<Desc>Đặc Tính Trận Pháp - Bách Trùng</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_9">
-			<Title>อัตลักษณ์แห่งค่ายกล - อเวจีพิพากษา</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - อเวจีพิพากษา</Desc>
+			<Title>Đặc Tính Trận Pháp - A Tỳ Thẩm Phán</Title>
+			<Desc>Đặc Tính Trận Pháp - A Tỳ Thẩm Phán</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_10">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งเจ็ดกระบี่ล่าสังหาร</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งเจ็ดกระบี่ล่าสังหาร</Desc>
+			<Title>Đặc Tính Trận Pháp - Thất Sát Kiếm</Title>
+			<Desc>Đặc Tính Trận Pháp - Thất Sát Kiếm</Desc>
 		</Text>
 		<Text Name="ZhenSlotSuitSlotSuit_School_11">
-			<Title>อัตลักษณ์แห่งค่ายกล - จิตแห่งสราญรมย์</Title>
-			<Desc>อัตลักษณ์แห่งค่ายกล - จิตแห่งสราญรมย์</Desc>
+			<Title>Đặc Tính Trận Pháp - Cực Lạc</Title>
+			<Desc>Đặc Tính Trận Pháp - Cực Lạc</Desc>
 		</Text>
 	</List>
 </Texts>
