--- a/Language/Vi/Settings/Display/EsotericaName/GongPrefix.txt
+++ b/Language/Vi/Settings/Display/EsotericaName/GongPrefix.txt
@@ -1,4 +1,4 @@
-ระดับ I,ศูนย์กลาง,เบื้องต้น,ดอกอำพัน,ภายใน,พื้นฐาน,สมุนไพร,สุขุม,ศีลทั้งห้า
-ระดับ II,คาถาปราณ,ใจความหลัก,หยินยาง,มนุษยธรรม,แก่นทองคำ,การปรับแต่ง,ประตูจิต,ภาวะปลุกพลัง
-ระดับ III,ปฐมกาล,สามพรสวรรค์,จำแลงกาย,คุณธรรม,แยบยล,บรรยากาศ,จุดสูงสุด,ลืมเลือน
-ระดับ IV,คาถาวิญญาณ,เหนือฟ้า,เที่ยงแท้,ไร้อคติ,เมฆาม่วง,หยกสิ้นสูญ,ความเวิ้งว้างอันยิ่งใหญ่,โชคชะตา
+Cấp I,Trung tâm,Sơ cấp,Hổ phách,Nội môn,Cơ bản,Thảo dược,Ôn hòa,Ngũ giới
+Cấp II,Phù chú,Cốt lõi,Âm Dương,Nhân đức,Kim đan,Điều hòa,Môn tâm,Kích hoạt
+Cấp III,Nguyên thủy,Tam tài,Biến hóa,Công đức,Tinh tế,Khí chất,Tột đỉnh,Lãng quên
+Cấp IV,Thần chú,Siêu phàm,Chân chính,Vô ngã,Tử vân,Ngọc tủy,Hỗn mang,Thiên mệnh
