--- a/Language/Vi/Settings/Display/EsotericaName/SkillMid.txt
+++ b/Language/Vi/Settings/Display/EsotericaName/SkillMid.txt
@@ -1,10 +1,10 @@
-ความเสียหายกระสุน 1,กาลเวลา,แสงนภา,สายลม,แสงดารา,ชำระล้าง
-ความเสียหายโดยตรง 2,สวรรค์,แผ่นดินไหว,สวรรค์สร้าง,ลืมเลือน,ทำลายล้าง,สิบสอง,เก้า,เสาทั้งแปด
-เสริมพลังอาวุธวิเศษ 3 (เดี่ยว),อาคมเวท,เงามืด,ไร้ตัวตน,เจ็ดดารา,อนิจจัง,ไพศาล,รูปปั้นสี่ทิศ
-เสริมพลังอาวุธวิเศษ 4 (หมู่),ผนึกสวรรค์,ดวงดารา,สรรพสิ่ง,เสียงสะท้อน,แบบจำลอง,เงาภูติ
-เสริมพลังเวท 5 (เดี่ยว),แผดเผา,อาคมเวท,ดาวฤกษ์,แต่กำเนิด
-เสริมพลังเวท 6 (หมู่),ยิ่งใหญ่,เจตภูต,ลึกลับ,สวรรค์,โลกา
-ฟื้นฟู 7 (เดี่ยว),ปราณรักษา,เรียกฝน,ให้ชีวิต,ฟื้นคืนชีพ,ปราณทั้งห้า,ความสงบ,สามแฉก
-ฟื้นฟู 8 (หมู่),ปราณรักษา,เรียกฝน,ให้ชีวิต,ฟื้นคืนชีพ,ปราณทั้งห้า,ความสงบ,สามแฉก
-เสริมเกราะปราณ 9 (เดี่ยว),เกราะเหล็ก,ไม่พังทลาย,อยู่ยงคงกระพัน,สัมบูรณ์,อาภรณ์ปราณ
-เสริมเกราะปราณ 10 (หมู่),เกราะเหล็ก,ไม่พังทลาย,อยู่ยงคงกระพัน,สัมบูรณ์,อาภรณ์ปราณ
+Sát thương đạn 1,Thời gian,Thiên quang,Gió,Tinh quang,Thanh tẩy
+Sát thương trực tiếp 2,Thiên tai,Địa chấn,Thần công,Lãng quên,Hủy diệt,Mười hai,Chín,Tám cột
+Cường hóa pháp bảo 3 (đơn),Pháp chú,Hắc ám,Vô hình,Thất tinh,Vô thường,Rộng lớn,Tứ tượng
+Cường hóa pháp bảo 4 (quần),Thiên phong,Tinh tú,Vạn vật,Cộng hưởng,Mô phỏng,Yêu ảnh
+Cường hóa pháp thuật 5 (đơn),Cháy rực,Pháp chú,Tinh tú,Tiên thiên
+Cường hóa pháp thuật 6 (quần),Vĩ đại,U minh,Thần bí,Thiên giới,Địa giới
+Hồi phục 7 (đơn),Pháp liệu,Hô phong,Sinh mệnh,Tái sinh,Ngũ hành,Thanh tịnh,Tam tài
+Hồi phục 8 (quần),Pháp liệu,Hô phong,Sinh mệnh,Tái sinh,Ngũ hành,Thanh tịnh,Tam tài
+Cường hóa hộ thể 9 (đơn),Thiết giáp,Bất hoại,Bất diệt,Hoàn mỹ,Linh giáp
+Cường hóa hộ thể 10 (quần),Thiết giáp,Bất hoại,Bất diệt,Hoàn mỹ,Linh giáp
