--- a/Language/Vi/Settings/Display/EsotericaName/SkillSuffix.txt
+++ b/Language/Vi/Settings/Display/EsotericaName/SkillSuffix.txt
@@ -1,10 +1,10 @@
-ความเสียหายกระสุน 1,คาถา,อาคมเวท,มนตรา,อัสนี
-ความเสียหายโดยตรง 2,จักรวาล,หลอมจักรวาล
-เสริมพลังอาวุธวิเศษ 3 (เดี่ยว),เวทกระบี่,กระบี่หลบหลีก,กระบี่
-เสริมพลังอาวุธวิเศษ 4 (หมู่),กระบี่โล่,เวทกระบี่,กระบี่หลบหลีก,กระบี่
-เสริมพลังเวท 5 (เดี่ยว),คาถา,อาคมเวท,มนตรา,กฎ,เวท,ปาฏิหาริย์
-เสริมพลังเวท 6 (หมู่),ค่ายกล,เกราะ,อาณาเขตต้องสาป,ลำดับยันต์
-ฟื้นฟู 7 (เดี่ยว),คาถา,อาคมเวท,มนตรา,กฎ,เวท,ปาฏิหาริย์
-ฟื้นฟู 8 (หมู่),ค่ายกล,เกราะ,อาณาเขตต้องสาป,ลำดับยันต์
-เสริมเกราะปราณ 9 (เดี่ยว),คาถา,อาคมเวท,มนตรา,กฎ,เวท,ปาฏิหาริย์
-เสริมเกราะปราณ 10 (หมู่),ค่ายกล,เกราะ,อาณาเขตต้องสาป,ลำดับยันต์
+Sát thương đạn 1,Phù chú,Pháp thuật,Thần chú,Sấm sét
+Sát thương trực tiếp 2,Vũ trụ,Vũ trụ luyện
+Cường hóa pháp bảo 3 (đơn),Kiếm quyết,Kiếm pháp,Kiếm thuật
+Cường hóa pháp bảo 4 (quần),Kiếm trận,Khiên kiếm,Kiếm pháp,Kiếm thuật
+Cường hóa pháp thuật 5 (đơn),Phù chú,Pháp thuật,Thần chú,Quy tắc,Pháp,Thần thông
+Cường hóa pháp thuật 6 (quần),Trận pháp,Hộ thể,Kết giới,Linh ấn
+Hồi phục 7 (đơn),Phù chú,Pháp thuật,Thần chú,Quy tắc,Pháp,Thần thông
+Hồi phục 8 (quần),Trận pháp,Hộ thể,Kết giới,Linh ấn
+Cường hóa hộ thể 9 (đơn),Phù chú,Pháp thuật,Thần chú,Quy tắc,Pháp,Thần thông
+Cường hóa hộ thể 10 (quần),Trận pháp,Hộ thể,Kết giới,Linh ấn
