--- a/Language/Vi/Settings/Display/EsotericaName/Suffix.txt
+++ b/Language/Vi/Settings/Display/EsotericaName/Suffix.txt
@@ -1,8 +1,8 @@
-ทั่วไป,กฎลับ,กวีนิพนธ์,คำแนะนำ,บรรณานุกรม,ม้วนคัมภีร์ลับ
-ทักษะอาวุธวิเศษ,กระบี่,เวทกระบี่,มนตรา,วิธีการ,เจ็ดวิธี,สิบวิธี,สิบสามวิธี,บรรณานุกรม,เคล็ดวิชา
-ปราณเวท,เจ็ดหน้ากระดาษ,เก้าตำรา,เล่มหนังสือ,หลักคำสอน,บรรณานุกรม,เคล็ดวิชา
-เกราะปราณ,หลักคำสอน,คัมภีร์ลับ,บรรณานุกรม,ม้วนคัมภีร์ลับ
-โอสถวิเศษ,สูตรโอสถ,ตำรับยา,คัมภีร์,สารานุกรม
-ประดิษฐ์,แกนหลัก,วิชาลับ,คัมภีร์,สารานุกรม
-วิชาบ่มเพาะ,วิชาเทพ,หลักคำสอน,ใจความสำคัญ,วิชาลับ
-จัดตำแหน่ง,แบบร่าง,ตำรา,บรรณานุกรม,บันทึก
+Tổng quát,Luật bí mật,Thi ca,Lời khuyên,Thư mục,Cuộn bí mật
+Kỹ năng pháp bảo,Kiếm,Kiếm pháp,Thần chú,Phương pháp,Bảy cách,Mười cách,Mười ba cách,Thư mục,Bí thuật
+Pháp thuật,Bảy trang,Chín bộ,Tập sách,Giáo lý,Thư mục,Bí thuật
+Hộ thể,Giáo lý,Bí kíp,Thư mục,Cuộn bí mật
+Đan dược,Công thức,Đơn thuốc,Kinh điển,Bách khoa toàn thư
+Chế tạo,Cốt lõi,Bí thuật,Kinh điển,Bách khoa toàn thư
+Tu luyện,Thần chú,Giáo lý,Cốt lõi,Bí thuật
+Sắp xếp,Bản thảo,Kinh điển,Thư mục,Bản ghi
