--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Bear.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Bear.txt
@@ -1,10 +1,10 @@
-หมี
-ขนปุย
-ยักษ์
-บ้าคลั่ง
-ลมกรด
-นักล่า
-จอมเชือด
-จอมโหด
-อันตราย
-หายนะ
+Gấu
+Lông lá
+Khổng lồ
+Cuồng nộ
+Thần tốc
+Thợ săn
+Sát thủ
+Tàn bạo
+Nguy hiểm
+Tai họa
