--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Cat.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Cat.txt
@@ -1,10 +1,10 @@
-เหมียว
-ลวงตา
-สุภาพ
-มีเสน่ห์
-ดักแด้
-เงามืด
-หยก
-ศรัทธา
-หัวใจ
-วิญญาณ
+Mèo
+Huyễn ảnh
+Dịu dàng
+Mê hoặc
+Ngủ đông
+Bóng tối
+Ngọc
+Đức tin
+Tâm hồn
+Linh hồn
