--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Cattle.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Cattle.txt
@@ -1,10 +1,10 @@
-ป่าเถื่อน
-อวดดี
-บดขยี้
-กระทิง
-มั่นคง
-กราดเกรี้ยว
-โกรธ
-บ้า
-ทรราช
-เดินขบวน
+Hoang dã
+Ngang ngược
+Nghiền nát
+Bò mộng
+Vững vàng
+Dữ tợn
+Cuồng nộ
+Điên cuồng
+Bạo chúa
+Hùng dũng
