--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Chicken.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Chicken.txt
@@ -1,10 +1,10 @@
-ไก่
-หมิง
-โหยหา
-สมบูรณ์
-ก่อน
-การพูด
-ฉิน
-เรียกหา
-จิ๊บๆ
-ดั้งเดิม
+Gà
+Minh
+Khao khát
+Hoàn mỹ
+Tiên thiên
+Hót
+Tần
+Hồi âm
+Thanh thanh
+Nguyên thủy
