--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Frog.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Frog.txt
@@ -1,50 +1,50 @@
-กบ
-คางคก
-จ้าว
-เฉียน
-ดวงอาทิตย์
-หลี่
-โจวโจว
-หวู่
-เจิ้ง
-วัง
-เฟิง
-เฉิน
-ชู
-เว่ย
-เจียง
-เซิน
-ฮัน
-หยาง
-จู
-ฉิน
-คุณ
-ซู่
-เขา
-เลเวล
-ชิ
-จาง
-ก้อง
-เฉา
-ยัน
-หัว
-จิน
-เว่ย
-เต๋า
-เจียง
-ฉี
-เซี่ย
-ซู
-ยู
-ไป่
-สุ่ย
-ตู่
-จาง
-หยุน
-ซู
-กระทะ
-เก
-ชิ
-พัดลม
-เป็ง
-ลัง
+Ếch
+Cóc
+Triệu
+Tiền
+Tôn
+Lý
+Chu Chu
+Ngô
+Trịnh
+Vương
+Phùng
+Trần
+Sở
+Vệ
+Tưởng
+Thẩm
+Hàn
+Dương
+Chu
+Tần
+Hữu
+Tô
+Hà
+Lô
+Kỳ
+Trương
+Không
+Sở
+Yên
+Hoa
+Kim
+Vị
+Đào
+Giang
+Kỳ
+Hạ
+Thọ
+Dư
+Bạch
+Tùy
+Đấu
+Trương
+Vân
+Thủy
+Phan
+Cách
+Kỳ
+Phạm
+Bành
+Lang
