--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Rabbit.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Rabbit.txt
@@ -1,10 +1,10 @@
-กระต่าย
-ดวล
-น่ารัก
-นำโชค
-กระโจน
-ไร้สีสัน
-เงา
-จันทรา
-หยิน
-คลื่น
+Thỏ
+Chiến đấu
+Dễ thương
+May mắn
+Nhảy vọt
+Vô sắc
+Bóng tối
+Nguyệt
+Âm
+Sóng
