--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Snake.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Snake.txt
@@ -1,10 +1,10 @@
-งู
-ขด
-อุบาทว์
-ร้ายกาจ
-เขี้ยว
-ลิ้นสองแฉก
-ลูกคลื่น
-อันตราย
-ลามก
-สีแดงสด
+Rắn
+Cuộn mình
+Gớm ghiếc
+Hiểm độc
+Nanh độc
+Lưỡi đôi
+Sóng
+Nguy hiểm
+Dâm đãng
+Đỏ tươi
