--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Tiger.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Tiger.txt
@@ -1,10 +1,10 @@
-เสือ
-เขี้ยว
-กลืนกิน
-หอน
-บิน
-ดุร้าย
-ร้ายกาจ
-เลือด
-หวัง
-ชั่วร้าย
+Hổ
+Nanh vuốt
+Nuốt chửng
+Gầm rú
+Bay lượn
+Hung dữ
+Tàn ác
+Máu
+Vương
+Tà ác
