--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Turtle.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Turtle.txt
@@ -1,10 +1,10 @@
-เต่า
-อายุยืน
-ดั้งเดิม
-เมฆมาก
-ทรงพลัง
-อุ้ยอ่าย
-ใจสั่น
-เงาพราย
-ทมิฬ
-บูรพา
+Rùa
+Trường thọ
+Nguyên thủy
+U ám
+Hùng mạnh
+Chậm chạp
+Rung động
+Bóng ma
+U tối
+Đông phương
