--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Wolf.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Wolf.txt
@@ -1,10 +1,10 @@
-หมาป่า
-เขี้ยว
-กลืนกิน
-หอน
-บิน
-ดุร้าย
-ร้ายกาจ
-เลือด
-โหดร้าย
-ชั่วร้าย
+Sói
+Nanh vuốt
+Nuốt chửng
+Gầm rú
+Bay lượn
+Hung dữ
+Tàn ác
+Máu
+Tàn bạo
+Tà ác
