--- a/Language/Vi/Settings/Display/NpcName/RaceName/MSuffix.txt
+++ b/Language/Vi/Settings/Display/NpcName/RaceName/MSuffix.txt
@@ -1,178 +1,179 @@
-ฉีหลิง
-โม่จู
-เหยารุ่ย
-ซิ่วจิน
-เฟยหยาง
-จื่อหบวน
-หงเซิง
-หยุนห่าว
-เฟยอัง
-ห่าวเฉียว
-ชิงชิง
-เผิงเหลียง
-เย่วอวี๋
-ฉีเหวิน
-โปอี้
-ชีหลิง
-กวางเหอ
-เป็งหยุน
-เว่ยเยียน
-จี๋หลี่
-เมี๋ยวเสวียน
-ซิงซื่อ
-จื้อเฉียง
-หงเสวียน
-จื้อเสวียน
-หงฉาง
-จื้อชิ
-ซ่างเจิ้น
-หยวนฮาง
-ลู่ชง
-เสวียจื่อ
-หงเปา
-จี๋เซียน
-ซื่อหยวน
-อิ๋งฟา
-อวี๋ถาง
-ชิติง
-ซื่อเมี๋ยว
-เย่ลั่ว
-อวี๋ชิ
-เหลียงไช่
-อวี๋ซู
-จื่อหย๋ง
-เจิ้นกั๋ว
-ซิงเย่
-เหลียง
-ตง
-เว่ย
-ฉี
-เค่อ
-หลุน
-เซียง
-ซู
-เป็ง
-เจ่อ
-เฉิน
-เฉิน
-ชิ
-อี้
-เจี้ยน
-เจี๋ย
-จื่อ
-ซู
-หยาน
-เซิง
-สง
-เฉิน
-หยุน
-กวน
-เส้อ
-เถิง
-หนาน
-หรง
-เฟิง
-ฮาง
-หง
-อี้
-ซิง
-เหลียง
-เฟย
-ปิ่น
-ฝู
-เหอ
-หมิง
-เป็ง
-ปิ่น
-ซิง
-ชิ
-ไท้
-โป
-เหลย
-หมิน
-โหย่ว
-จื่อ
-ชิง
-เจี้ยน
-ชิง
-โร่ว
-เต๋อ
-เปียว
-เว่ย
-กัง
-หย๋ง
-อี้
-จุน
-เฟิง
-เฉียง
-จุน
-ปิง
-เปา
-ตง
-เหวิน
-ฮุ่ย
-หลี่
-หมิง
-หย๋ง
-เจี้ยน
-ชิ
-กวาง
-ไห่
-ชาน
-เหริน
-โป
-หนิง
-ฝู
-เซิง
-หลง
-หยวน
-เฉวียน
-กั๋ว
-เซิง
-เสวีย
-เซียง
-ไช่
-ฟา
-อู๋
-ซิน
-หลี่
-ชุน
-ซิน
-จื้อ
-เจี๋ย
-เถา
-ฉาง
-เจิง
-คาง
-ซิง
-กวาง
-เทียน
-ต๋า
-อัน
-หยาน
-จง
-เหมา
-จิน
-หลิน
-โหย่ว
-เจิง
-เซียน
-จิง
-เจิ้น
-เจิ้น
-จวง
-ฮุ่ย
-ซื่อ
-ฉุน
-ฮ่าว
-ซิน
-ปาง
-เจิง
-เย่ว
-เส้า
-กง
-ซ้ง
-ชาน
-โฮ่ว
-อวี๋
-หยิน
+Kỳ Lân
+Mặc Chu
+Dao Thụy
+Tú Cẩm
+Phi Dương
+Tử Huyên
+Hồng Sinh
+Vân Hạo
+Phi Ngang
+Hạo Kiều
+Thanh Thanh
+Bành Lương
+Nguyệt Dư
+Kỳ Văn
+Bạc Y
+Kỳ Lân
+Quang Hà
+Bành Vân
+Vị Yên
+Cát Lợi
+Miêu Huyền
+Tinh Thủy
+Trí Cường
+Hồng Tuyên
+Trí Tuyên
+Hồng Xương
+Trí Khí
+Thượng Chấn
+Nguyên Hàng
+Lộ Xung
+Tuyết Tử
+Hồng Bào
+Cát Tiên
+Tự Nguyên
+Oánh Phát
+Dư Đường
+Kỳ Đình
+Tự Miêu
+Diệp Lạc
+Dư Khí
+Lương Thái
+Dư Sơ
+Tử Vĩnh
+Chấn Quốc
+Tinh Dạ
+Lương
+Đông
+Vị
+Kỳ
+Khắc
+Luân
+Tương
+Tố
+Bành
+Chiết
+Thần
+Thần
+Thủy
+Y
+Kiến
+Kiệt
+Tử
+Tố
+Yên
+Sinh
+Tùng
+Thần
+Vân
+Quan
+Sắc
+Đằng
+Nam
+Dung
+Phong
+Hàng
+Hồng
+Y
+Tinh
+Lương
+Phi
+Bân
+Phù
+Hà
+Minh
+Bành
+Bân
+Tinh
+Thủy
+Thái
+Bạc
+Lôi
+Mẫn
+Hữu
+Tử
+Thanh
+Kiến
+Thanh
+Nhu
+Đức
+Tiêu
+Vị
+Cương
+Vĩnh
+Y
+Tôn
+Phong
+Cường
+Tôn
+Binh
+Bảo
+Đông
+Văn
+Huệ
+Lý
+Minh
+Vĩnh
+Kiến
+Thủy
+Quang
+Hải
+San
+Nhân
+Bạc
+Ninh
+Phù
+Sinh
+Long
+Nguyên
+Toàn
+Quốc
+Sinh
+Tuyết
+Tương
+Thái
+Pháp
+Vô
+Tâm
+Lý
+Thuần
+Tân
+Trí
+Kiệt
+Đào
+Xương
+Tranh
+Khang
+Tinh
+Quang
+Thiên
+Đạt
+An
+Yên
+Trọng
+Mao
+Kim
+Lâm
+Hữu
+Tranh
+Tiên
+Kinh
+Chấn
+Chấn
+Trang
+Huệ
+Tư
+Thuần
+Hạo
+Tân
+Bàng
+Tranh
+Nguyệt
+Thiếu
+Công
+Tùng
+San
+Hậu
+Dư
+Ân
+
