--- a/Language/Vi/Settings/Display/NpcName/TradeName/NaughtPrefix.txt
+++ b/Language/Vi/Settings/Display/NpcName/TradeName/NaughtPrefix.txt
@@ -1,2 +1,2 @@
-บุรุษ,กัวเจียง,หวาง,หลี,จาง,หลิว,หวงเหมา,จ้าว,เฉียน,ซุน,โจว,อู๋,เจิ้ง,หวาง
-สตรี,กัวเจียง,หวาง,หลี,จาง,หลิว,หวงเหมา,จ้าว,เฉียน,ซุน,โจว,อู๋,เจิ้ง,หวาง
+Nam,Quách Giang,Vương,Lý,Trương,Lưu,Hoàng Mao,Triệu,Tiền,Tôn,Chu,Ngô,Trịnh,Vương
+Nữ,Quách Giang,Vương,Lý,Trương,Lưu,Hoàng Mao,Triệu,Tiền,Tôn,Chu,Ngô,Trịnh,Vương
