--- a/Language/Vi/Settings/Display/NpcName/TradeName/NaughtSuffix.txt
+++ b/Language/Vi/Settings/Display/NpcName/TradeName/NaughtSuffix.txt
@@ -1,2 +1,2 @@
-บุรุษ,มังกรน้อย,หมาน้อย,งูน้อย,แกว๊ก,ม๊อ,โฮ่ง,น้องหมา,แท่งเหล็ก,รวย,ป็อก,พี่ชาย,หมาน้อย,หัวโต,สี่,สาม,ไอ้ต้าว,ผมยาว,ไก่เป่า
-สตรี,งูน้อย,แมวน้อย,กระต่ายน้อย,ชุยฮัว,ซูเฟิน,พี่สาว,น้องสาว,สาวน้ำชา,ดอกไม้สีทอง,ชุยฮัว
+Nam,Tiểu Long,Tiểu Cẩu,Tiểu Xà,Cạc cạc,Meo meo,Gâu gâu,Cún con,Thép,Giàu có,Đáng yêu,Ca ca,Cún con,Đầu to,Tứ,Tam,Tiểu khả ái,Tóc dài,Gà con
+Nữ,Tiểu Xà,Tiểu Miêu,Tiểu Thỏ,Thúy Hoa,Tố Phấn,Tỷ tỷ,Muội muội,Tiểu muội,Kim Hoa,Thúy Hoa
