--- a/Language/Vi/Settings/Display/NpcName/TradeName/NormalPrefix.txt
+++ b/Language/Vi/Settings/Display/NpcName/TradeName/NormalPrefix.txt
@@ -1,2 +1,2 @@
-บุรุษ,เมืองจักรพรรดิ์,เมืองมหาทรัพย์,ที่ราบตอนกลาง,ชายแดนใต้,หมู่บ้านหางอสรพิษ,ทะเลทรายไร้ขอบเขต,เมืองต้าเหลียง,ที่ราบหิมะ,เมืองสายน้ำหวน,ที่ราบอุดมสมบูรณ์,ภูเขาแดนใต้
-บุรุษ,เมืองจักรพรรดิ์,เมืองมหาทรัพย์,ที่ราบตอนกลาง,ชายแดนใต้,หมู่บ้านหางอสรพิษ,ทะเลทรายไร้ขอบเขต,เมืองต้าเหลียง,ที่ราบหิมะ,เมืองสายน้ำหวน,ที่ราบอุดมสมบูรณ์,ภูเขาแดนใต้
+Nam,Đế Đô,Thịnh Kinh,Trung Nguyên,Nam Cương,Xà Vỹ thôn,Sa Mạc Vô Tận,Đại Lương Thành,Đại Tuyết Nguyên,Hồi Thủy Trấn,Phì Nhiêu Chi Địa,Nam Sơn Cảnh
+Nữ,Đế Đô,Thịnh Kinh,Trung Nguyên,Nam Cương,Xà Vỹ thôn,Sa Mạc Vô Tận,Đại Lương Thành,Đại Tuyết Nguyên,Hồi Thủy Trấn,Phì Nhiêu Chi Địa,Nam Sơn Cảnh
