--- a/Language/Vi/Settings/Display/NpcName/TradeName/NormalSuffix.txt
+++ b/Language/Vi/Settings/Display/NpcName/TradeName/NormalSuffix.txt
@@ -1,2 +1,2 @@
-บุรุษ,คุณชายหลี,ซือหม่า,ซือถู,คุณชายหวัง,คุณชายสิบสอง,คุณชายเว่ย,คุณชายคุน,เป่ายู่,คุณชายหลิน,ซื่อหลาง,หยู๋ถัง,เสวียนเต๋อ,คุณชายซู,คุณชายเฉิน,ฝูซู,คุณชายหลู่,จู่เก๋อ,ไท้สื่อ,อู๋หม่า,ไฉฟู่,ไท่ชู,คุณชายฉวี,ฮ้าวเทียน
-สตรี,เย่วเอ๋อ,หว่านเอ๋อ,ซีเฟิง,หยวนหหยาง,ชิงหยุน,เซียงหยุน,เป่าไฉ่,คุณหนู,ธิดา,รู่หลัน,เสวี่ยเตี๋ย,ปิงหลิง,จื่อหยุน,หลิวหลี,เมิ่งเว่ย,หรูอิง,ชิงเหมย,หยุนชาน,ฉิวเย่ว,เหว่ยเยว่,เซี่ยเหอ
+Nam,Lý công tử,Tư Mã,Tư Đồ,Vương công tử,Thập Nhị công tử,Vệ công tử,Côn công tử,Bảo Ngọc,Lâm công tử,Thị Lang,Ngọc Đường,Huyền Đức,Tô công tử,Trần công tử,Phù Tô,Lô công tử,Gia Cát,Thái Sư,Vô Mã,Thái Phú,Thái Sơ,Khúc công tử,Hạo Thiên
+Nữ,Nguyệt Nhi,Hoàn Nhi,Tịch Phong,Uyên Ương,Thanh Vân,Tương Vân,Bảo Thoa,Tiểu thư,Công chúa,Như Lan,Tuyết Điệp,Băng Linh,Tử Vân,Lưu Ly,Mộng Vị,Như Oánh,Thanh Mai,Vân San,Thu Nguyệt,Vĩ Nguyệt,Hạ Hà
