--- a/Language/Vi/Settings/Display/NpcName/TradeName/SanXiuPrefix.txt
+++ b/Language/Vi/Settings/Display/NpcName/TradeName/SanXiuPrefix.txt
@@ -1,2 +1,2 @@
-บุรุษ,ภูเขาถงหลิง,ภูเขาเหลียง,หมู่บ้านหนานปิง,ภูเขาจันทร์เพ็ญ,ภูเขาเก้าบุปผา,ทุ่งบุปผาโรย,หมู่บ้านต้นอ้อ,ยอดเขาโอสถ,ภูเขาผิงติง,ภูเขาแตะฟ้า,เนินทรายครวญ,ภูเขาหิมะ,เมืองหานซาน,ภูเขาลู่,ภูเขากุ่ย
-สตรี,ภูเขาถงหลิง,ภูเขาเหลียง,หมู่บ้านหนานปิง,ภูเขาจันทร์เพ็ญ,ภูเขาเก้าบุปผา,ทุ่งบุปผาโรย,หมู่บ้านต้นอ้อ,ยอดเขาโอสถ,ภูเขาผิงติง,ภูเขาแตะฟ้า,เนินทรายครวญ,ภูเขาหิมะ,เมืองหานซาน,ภูเขาลู่,ภูเขากุ่ย
+Nam,Đồng Lăng Sơn,Lương Sơn,Nam Bình thôn,Nguyệt Luân Sơn,Cửu Hoa Sơn,Hoa Tàn Cốc,Lô Hoa thôn,Dược Vương Đỉnh,Bình Đỉnh Sơn,Phù Thiên Sơn,Sa Ngân Sơn,Tuyết Sơn,Hàn Sơn Thành,Lư Sơn,Quỷ Sơn
+Nữ,Đồng Lăng Sơn,Lương Sơn,Nam Bình thôn,Nguyệt Luân Sơn,Cửu Hoa Sơn,Hoa Tàn Cốc,Lô Hoa thôn,Dược Vương Đỉnh,Bình Đỉnh Sơn,Phù Thiên Sơn,Sa Ngân Sơn,Tuyết Sơn,Hàn Sơn Thành,Lư Sơn,Quỷ Sơn
