--- a/Language/Vi/Settings/Display/NpcName/TradeName/SanXiuSuffix.txt
+++ b/Language/Vi/Settings/Display/NpcName/TradeName/SanXiuSuffix.txt
@@ -1,2 +1,2 @@
-บุรุษ,ผู้วางยาพิษ,ครู,อมตะน้อย,พเนจร,คางคกทอง,เจ้าของบ้า,นักพรตเต๋า,ผู้อาวุโส,อสูรดนตรี,เซียนดนตรี,เซียนกวี,ปราชญ์กวี,อสูรกวี,จอมยุทธ์,พระ,เซียนจิตรกร,อสูรจิตรกร,ปรมาจารย์นักเขียน,ปราชญ์นักเเขียน,อสูรนักเขียน
-สตรี,ผู้วางยาพิษ,อมตะน้อย,พเนจร,พี่สะใภ้,แม่ชี,เจ้าของบ้า,อสูรดนตรี,เซียนดนตรี,เซียนกวี,ปราชญ์กวี,อสูรกวี,จอมยุทธ์,พระ,เซียนจิตรกร,อสูรจิตรกร,ปรมาจารย์นักเขียน,ปราชญ์นักเเขียน,อสูรนักเขียน
+Nam,Độc sư,Thầy,Tiểu tiên,Du hiệp,Kim Thiềm,Cuồng nhân,Đạo sĩ,Tiền bối,Ma âm,Tiên âm,Tiên thi,Thi nhân,Ma thi,Hiệp khách,Phật tử,Tiên họa,Ma họa,Thư thánh,Thư sinh,Ma thư
+Nữ,Độc sư,Tiểu tiên,Du hiệp,Sư nương,Ni cô,Cuồng nhân,Ma âm,Tiên âm,Tiên thi,Thi nhân,Ma thi,Hiệp khách,Phật tử,Tiên họa,Ma họa,Thư thánh,Thư sinh,Ma thư
