--- a/Language/Vi/Settings/CommandDef/CommandTypeDef_Other.xml
+++ b/Language/Vi/Settings/CommandDef/CommandTypeDef_Other.xml
@@ -1,40 +1,40 @@
 <Texts Type="Other">
 	<List>
 		<Text Name="LongWish">
-			<SParam2>ไปขอพร</SParam2>
+			<SParam2>Đi cầu nguyện</SParam2>
 		</Text>
 		<Text Name="MoveToTalk">
-			<SParam2>พูดคุยกับพ่อค้า</SParam2>
+			<SParam2>Nói chuyện với thương nhân</SParam2>
 		</Text>
 		<Text Name="MoveToTrade">
-			<SParam2>ค้าขายกับพ่อค้า</SParam2>
+			<SParam2>Giao dịch với thương nhân</SParam2>
 		</Text>
 		<Text Name="Move2UnlockGong">
-			<SParam2>ไปศึกษาวิชาบ่มเพาะ</SParam2>
+			<SParam2>Đi tu luyện công pháp</SParam2>
 		</Text>
 		<Text Name="MoveToTake">
-			<SParam2>ไปจับสัตว์</SParam2>
+			<SParam2>Đi bắt động vật</SParam2>
 		</Text>
 		<Text Name="GoToActiveLcBuild">
-			<SParam2>ไปใช้งานรูปวัตถุวิเศษ</SParam2>
+			<SParam2>Đi kích hoạt pháp bảo</SParam2>
 		</Text>
 		<Text Name="MoveToTakeLc">
-			<SParam2>ไปรับเลี้ยง</SParam2>
+			<SParam2>Đi nhận nuôi</SParam2>
 		</Text>
 		<Text Name="MoveToRefuseLc">
-			<SParam2>ไปขับไล่</SParam2>
+			<SParam2>Đi đuổi đi</SParam2>
 		</Text>
 		<Text Name="MoveToKickoutAnimal">
-			<SParam2>ไปขับไล่</SParam2>
-			<SParam3>ขับไล่,ksjujue,3</SParam3>
+			<SParam2>Đi đuổi đi</SParam2>
+			<SParam3>Đuổi đi,ksjujue,3</SParam3>
 		</Text>
 		<Text Name="MoveToFreePackAnimal">
-			<SParam2>ไปเปิด</SParam2>
-			<SParam3>เปิด,ได้รับ,3</SParam3>
+			<SParam2>Đi mở</SParam2>
+			<SParam3>Mở,Nhận,3</SParam3>
 		</Text>
 		<Text Name="MoveToCanWu">
-			<SParam2>ไปฝึกลมปราณ</SParam2>
-			<SParam3>ฝึกลมปราณ,dazuo,3</SParam3>
+			<SParam2>Đi luyện khí</SParam2>
+			<SParam3>Luyện khí,dazuo,3</SParam3>
 		</Text>
 	</List>
 </Texts>
