--- a/Language/Vi/Settings/Display/ArtItem/Weapon.xml
+++ b/Language/Vi/Settings/Display/ArtItem/Weapon.xml
@@ -1,112 +1,112 @@
 <Texts Type="Other">
 	<List>
 		<Text Name="Item_WeaponKnife">
-			<List.0.Name>ดาบผ่าโลหิต</List.0.Name>
-			<List.0.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.0.Desc>
-			<List.1.Name>ดาบเพลิงนรก</List.1.Name>
-			<List.1.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.1.Desc>
-			<List.2.Name>ดาบกระแทกสังหาร</List.2.Name>
-			<List.2.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.2.Desc>
-			<List.3.Name>ดาบละอองโลหิต</List.3.Name>
-			<List.3.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.3.Desc>
-			<List.4.Name>ดาบดวงดารา</List.4.Name>
-			<List.4.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.4.Desc>
+			<List.0.Name>Đao Phá Huyết</List.0.Name>
+			<List.0.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.0.Desc>
+			<List.1.Name>Đao Hỏa Ngục</List.1.Name>
+			<List.1.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.1.Desc>
+			<List.2.Name>Đao Chấn Sát</List.2.Name>
+			<List.2.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.2.Desc>
+			<List.3.Name>Đao Huyết Vụ</List.3.Name>
+			<List.3.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.3.Desc>
+			<List.4.Name>Đao Tinh Tú</List.4.Name>
+			<List.4.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.4.Desc>
 		</Text>
 		<Text Name="Item_WeaponSword">
-			<List.0.Name>กระบี่พิฆาตวายุ</List.0.Name>
-			<List.0.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.0.Desc>
-			<List.1.Name>กระบี่กิเลน</List.1.Name>
-			<List.1.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.1.Desc>
-			<List.2.Name>กระบี่อสรพิษ</List.2.Name>
-			<List.2.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.2.Desc>
-			<List.3.Name>กระบี่เหนือฟ้า</List.3.Name>
-			<List.3.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.3.Desc>
-			<List.4.Name>กระบี่ขานเงา</List.4.Name>
-			<List.4.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.4.Desc>
-			<List.5.Name>กระบี่ปีศาจ</List.5.Name>
-			<List.5.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.5.Desc>
-			<List.6.Name>กระบี่เหล็กกล้า</List.6.Name>
-			<List.6.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.6.Desc>
-			<List.7.Name>กระบี่ร้อยคม</List.7.Name>
-			<List.7.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.7.Desc>
-			<List.8.Name>กระบี่ดื่มโลหิต</List.8.Name>
-			<List.8.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.8.Desc>
+			<List.0.Name>Kiếm Phong Sát</List.0.Name>
+			<List.0.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.0.Desc>
+			<List.1.Name>Kiếm Kỳ Lân</List.1.Name>
+			<List.1.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.1.Desc>
+			<List.2.Name>Kiếm Độc Xà</List.2.Name>
+			<List.2.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.2.Desc>
+			<List.3.Name>Kiếm Lăng Thiên</List.3.Name>
+			<List.3.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.3.Desc>
+			<List.4.Name>Kiếm Ảnh</List.4.Name>
+			<List.4.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.4.Desc>
+			<List.5.Name>Kiếm Ma</List.5.Name>
+			<List.5.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.5.Desc>
+			<List.6.Name>Kiếm Tinh Cương</List.6.Name>
+			<List.6.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.6.Desc>
+			<List.7.Name>Kiếm Bách Nhẫn</List.7.Name>
+			<List.7.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.7.Desc>
+			<List.8.Name>Kiếm Huyết Ẩm</List.8.Name>
+			<List.8.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.8.Desc>
 		</Text>
 		<Text Name="Item_WeaponLance">
-			<List.0.Name>ทวนเขย่าโลกา</List.0.Name>
-			<List.0.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.0.Desc>
-			<List.1.Name>ทวนยอดขุนพล</List.1.Name>
-			<List.1.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.1.Desc>
-			<List.2.Name>ทวนดาวตก</List.2.Name>
-			<List.2.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.2.Desc>
-			<List.3.Name>ทวนต้องสาบ</List.3.Name>
-			<List.3.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.3.Desc>
-			<List.4.Name>ทวนไร้ปราณี</List.4.Name>
-			<List.4.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.4.Desc>
-			<List.5.Name>ทวนลืมเลือน</List.5.Name>
-			<List.5.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.5.Desc>
-			<List.6.Name>ทวนพันสังหาร</List.6.Name>
-			<List.6.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.6.Desc>
-			<List.7.Name>ทวนเข็มอสูร</List.7.Name>
-			<List.7.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.7.Desc>
-			<List.8.Name>ทวนมหาทิวา</List.8.Name>
-			<List.8.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.8.Desc>
-			<List.9.Name>ทวนอเวจี</List.9.Name>
-			<List.9.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.9.Desc>
-			<List.10.Name>ทวนปีศาจ</List.10.Name>
-			<List.10.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.10.Desc>
+			<List.0.Name>Thương Chấn Thế</List.0.Name>
+			<List.0.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.0.Desc>
+			<List.1.Name>Thương Chiến Tướng</List.1.Name>
+			<List.1.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.1.Desc>
+			<List.2.Name>Thương Sao Băng</List.2.Name>
+			<List.2.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.2.Desc>
+			<List.3.Name>Thương Nguyền Rủa</List.3.Name>
+			<List.3.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.3.Desc>
+			<List.4.Name>Thương Vô Tình</List.4.Name>
+			<List.4.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.4.Desc>
+			<List.5.Name>Thương Vong Tình</List.5.Name>
+			<List.5.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.5.Desc>
+			<List.6.Name>Thương Thiên Sát</List.6.Name>
+			<List.6.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.6.Desc>
+			<List.7.Name>Thương Kim Ma</List.7.Name>
+			<List.7.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.7.Desc>
+			<List.8.Name>Thương Đại Nhật</List.8.Name>
+			<List.8.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.8.Desc>
+			<List.9.Name>Thương A Tỳ</List.9.Name>
+			<List.9.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.9.Desc>
+			<List.10.Name>Thương Quỷ</List.10.Name>
+			<List.10.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.10.Desc>
 		</Text>
 		<Text Name="Item_WeaponHalbert">
-			<List.0.Name>ง้าวประโยชน์อนันต์</List.0.Name>
-			<List.0.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.0.Desc>
-			<List.1.Name>ง้าวเขี้ยวภูติผี</List.1.Name>
-			<List.1.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.1.Desc>
-			<List.2.Name>ง้าวกระตุ้นวิญญาณ</List.2.Name>
-			<List.2.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.2.Desc>
-			<List.3.Name>ง้าวปัดเป่าภัยพาล</List.3.Name>
-			<List.3.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.3.Desc>
-			<List.4.Name>ง้าวกงเล็บนกเพลิง</List.4.Name>
-			<List.4.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.4.Desc>
-			<List.5.Name>ง้าวมองป่องพิษ</List.5.Name>
-			<List.5.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.5.Desc>
-			<List.6.Name>ง้าวตีสวรรค์</List.6.Name>
-			<List.6.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.6.Desc>
-			<List.7.Name>ง้าวของเกาเล่อร์</List.7.Name>
-			<List.7.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.7.Desc>
+			<List.0.Name>Kích Vô Lượng</List.0.Name>
+			<List.0.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.0.Desc>
+			<List.1.Name>Kích Quỷ Nha</List.1.Name>
+			<List.1.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.1.Desc>
+			<List.2.Name>Kích Nhiếp Hồn</List.2.Name>
+			<List.2.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.2.Desc>
+			<List.3.Name>Kích Trừ Tà</List.3.Name>
+			<List.3.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.3.Desc>
+			<List.4.Name>Kích Phượng Vuốt</List.4.Name>
+			<List.4.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.4.Desc>
+			<List.5.Name>Kích Bọ Cạp</List.5.Name>
+			<List.5.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.5.Desc>
+			<List.6.Name>Kích Phạt Thiên</List.6.Name>
+			<List.6.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.6.Desc>
+			<List.7.Name>Kích Của Cao Lạc</List.7.Name>
+			<List.7.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.7.Desc>
 		</Text>
 		<Text Name="Item_WeaponAxeRing">
-			<List.0.Name>จักรแยกสมุทร</List.0.Name>
-			<List.0.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.0.Desc>
-			<List.1.Name>จักรสายลมคลั่ง</List.1.Name>
-			<List.1.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.1.Desc>
-			<List.2.Name>จักรขับไล่ภัย</List.2.Name>
-			<List.2.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.2.Desc>
-			<List.3.Name>จักรเพลียกดารา</List.3.Name>
-			<List.3.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.3.Desc>
-			<List.4.Name>จักรผนึกฟ้า</List.4.Name>
-			<List.4.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.4.Desc>
+			<List.0.Name>Luân Phân Hải</List.0.Name>
+			<List.0.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.0.Desc>
+			<List.1.Name>Luân Cuồng Phong</List.1.Name>
+			<List.1.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.1.Desc>
+			<List.2.Name>Luân Trừ Tai</List.2.Name>
+			<List.2.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.2.Desc>
+			<List.3.Name>Luân Tinh Tú</List.3.Name>
+			<List.3.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.3.Desc>
+			<List.4.Name>Luân Phong Thiên</List.4.Name>
+			<List.4.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.4.Desc>
 		</Text>
 		<Text Name="Item_WeaponBow">
-			<List.0.Name>ธนูมังกร</List.0.Name>
-			<List.0.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.0.Desc>
-			<List.1.Name>ธนูแสงดารา</List.1.Name>
-			<List.1.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.1.Desc>
-			<List.2.Name>ธนูเขี้ยวอสูร</List.2.Name>
-			<List.2.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.2.Desc>
-			<List.3.Name>ธนูผู้คุมกฎ</List.3.Name>
-			<List.3.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.3.Desc>
-			<List.4.Name>ธนูยิงวิญญาณ</List.4.Name>
-			<List.4.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.4.Desc>
-			<List.5.Name>ธนูพลากชีวา</List.5.Name>
-			<List.5.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.5.Desc>
-			<List.6.Name>ธนูอสูรงูบรรพกาล</List.6.Name>
-			<List.6.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.6.Desc>
+			<List.0.Name>Cung Rồng</List.0.Name>
+			<List.0.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.0.Desc>
+			<List.1.Name>Cung Tinh Quang</List.1.Name>
+			<List.1.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.1.Desc>
+			<List.2.Name>Cung Ma Nha</List.2.Name>
+			<List.2.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.2.Desc>
+			<List.3.Name>Cung Chấp Pháp</List.3.Name>
+			<List.3.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.3.Desc>
+			<List.4.Name>Cung Phá Hồn</List.4.Name>
+			<List.4.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.4.Desc>
+			<List.5.Name>Cung Đoạt Mệnh</List.5.Name>
+			<List.5.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.5.Desc>
+			<List.6.Name>Cung Cổ Xà</List.6.Name>
+			<List.6.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.6.Desc>
 		</Text>
 		<Text Name="Item_WeaponWoodBow">
-			<List.0.Name>ธนูไม้วิญญาณ</List.0.Name>
-			<List.0.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.0.Desc>
-			<List.1.Name>ธนูสุดแกร่ง</List.1.Name>
-			<List.1.Desc>อาวุธอันวิจิตรงดงามนี้เกิดจากการความพยายาม,เลือด,น้ำตาและหยาดเหงื่ออันอุตสาหะของผู้สร้าง</List.1.Desc>
+			<List.0.Name>Cung Linh Mộc</List.0.Name>
+			<List.0.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.0.Desc>
+			<List.1.Name>Cung Cường Lực</List.1.Name>
+			<List.1.Desc>Vũ khí tinh xảo này được tạo ra từ nỗ lực, máu, nước mắt và mồ hôi của người thợ rèn.</List.1.Desc>
 		</Text>
 	</List>
 </Texts>
