--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Boar.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Prefix_Boar.txt
@@ -1,10 +1,10 @@
-หมูป่า
-พองขน
-จอมตะกละ
-ตุ้ยนุ้ย
-ตัวโต
-ยักษ์
-สีเลือด
-ผู้หิวโหย
-จอมเขมือบ
-ใจกล้า
+Lợn rừng
+Xù lông
+Tham ăn
+Mập mạp
+To lớn
+Khổng lồ
+Màu máu
+Đói khát
+Phàm ăn
+Gan dạ
