--- a/Language/Vi/Settings/Display/NpcName/JYAnimal/Suffix_All.txt
+++ b/Language/Vi/Settings/Display/NpcName/JYAnimal/Suffix_All.txt
@@ -1,136 +1,160 @@
-เลือด
-ร้ายกาจ
-พิษ
-โกรธ
-ใหญ่
-สอง
-สาม
-โฟร์
-ห้า
-หก
-เซเว่น
-แปด
-เก้า
-สวรรค์
-โลก
-ผู้ชาย
-ผี
-ไฟฟ้า
-ฟ้าผ่า
-ฟ้าร้อง
-โมฆะ
-โอนิกซ์
-ภัยพิบัติ
-ฆ่า
-สาหัส
-การทำลาย
-การรื้อถอน
-แตกสลาย
-ไขกระดูก
-รุนแรง
-เย็น
-เพลิงฟ้า
-เกรียม
-จริงจัง
-เปลวไฟ
-จักรวาล
-โลก
-เมธ
-ผลประโยชน์
-พร็อพ
-เตตร้า
-ห้าเหลี่ยม
-หกเหลี่ยม
-เจ็ดเหลี่ยม
-เซิน
-เอนเน่
-สิบทิศ
-ซือ
-ชู
-ยัน
-เหมาเหมา
-เฉิน
-ซิ
-หวู่
-เว่ย
-เซิน
-คุณ
-ซู่
-ไห่
-โลภ
-ปีศาจ
-มาตราส่วน
-วิญญาณ
-ดง
-เว่ย
-ฉี
-เก
-หลุน
-เซ
-เฉิน
-เฉิน
-ยัน
-เซิง
-ซง
-หยุน
-กวน
-เซ
-เต็ง
-เฟิง
-หมิง
-ซิง
-ไท
-ซื่อซื่อ
-ชิง
-เจียน
-รัว
-เปียว
-ยง
-ยี่
-เฟิง
-จุน
-เป่า
-ดง
-เหวิน
-ฮุ่ย
-หลี่
-หมิง
-ยง
-ชิ
-กวงกวง
-ไห่
-ฉาน
-โบ
-เซิง
-ยาว
-หยวน
-หวู่
-ซิน
-ชิ
-เจี๋ย
-เต๋า
-ช้าง
-เฉิง
-ซิง
-แสงสว่าง
-สวรรค์
-ดา
-หนึ่ง
-ยัน
-จงจง
-จิน
-หลิน
-ซีอาน
-จิงจิง
-เจิ้น
-เจิ้น
-จ้วง
-ฮุ่ย
-ซิ
-คุน
-ห่าว
-ปัง
-เฉิง
-เช่า
-ฆ้อง
-เพลง
+Máu
+Tàn ác
+Độc
+Cuồng nộ
+To lớn
+Hai
+Ba
+Bốn
+Năm
+Sáu
+Bảy
+Tám
+Chín
+Thiên
+Địa
+Nhân
+U linh
+Điện
+Sấm sét
+Sấm
+Hư không
+Onyx
+Tai họa
+Sát
+Nghiêm trọng
+Phá hủy
+Tan rã
+Tủy
+Mãnh liệt
+Lạnh
+Hỏa ngục
+Cháy xém
+Nghiêm trọng
+Lửa
+Vũ trụ
+Thế giới
+Thần
+Lợi ích
+Phù
+Tứ
+Ngũ
+Lục
+Thất
+Thần
+Địa
+Mã
+Minh
+Bách
+Hồng
+Động
+Vân
+Quan
+Xá
+Đằng
+Nam
+Dung
+Phong
+Hàng
+Hồng
+Y
+Tinh
+Lương
+Phi
+Bân
+Phù
+Hà
+Minh
+Pành
+Bân
+Tinh
+Thủy
+Thái
+Bạc
+Lôi
+Mẫn
+Hữu
+Tử
+Thanh
+Kiến
+Thanh
+Nhu
+Đức
+Tiêu
+Vị
+Cương
+Vĩnh
+Y
+Tôn
+Phong
+Cường
+Tôn
+Binh
+Bảo
+Đông
+Văn
+Huệ
+Lý
+Minh
+Vĩnh
+Kiến
+Thủy
+Quang
+Hải
+San
+Nhân
+Bạc
+Ninh
+Phù
+Sinh
+Long
+Nguyên
+Toàn
+Quốc
+Sinh
+Tuyết
+Tương
+Thái
+Pháp
+Vô
+Tâm
+Lý
+Thuần
+Tân
+Trí
+Kiệt
+Đào
+Xương
+Tranh
+Khang
+Tinh
+Quang
+Thiên
+Đạt
+An
+Yên
+Trọng
+Mao
+Kim
+Lâm
+Hữu
+Tranh
+Tiên
+Kinh
+Chấn
+Chấn
+Trang
+Huệ
+Tư
+Thuần
+Hạo
+Tân
+Pàng
+Tranh
+Nguyệt
+Thiếu
+Công
+Tùng
+San
+Hậu
+Dư
