--- a/Language/Vi/Settings/Display/NpcName/RaceName/FSuffix.txt
+++ b/Language/Vi/Settings/Display/NpcName/RaceName/FSuffix.txt
@@ -1,481 +1,481 @@
-โร่วเสวีย
-เฉียนจิง
-ฮ่านหลาน
-ไป๋เสวีย
-จื้อหย๋า
-จื้อหรง
-หลิงหย๋า
-อวี๋จิง
-หลิงจื่อ
-อวี๋ชิง
-เย่หลิว
-ชุนไป๋
-โร่วเยียน
-เฉียนโม่
-หนานชุน
-หลิงชิง
-หลิงเหยา
-ลั่วหลัน
-ฟางเฟิง
-เย่หรง
-ยี่ยี่
-อิ๋งชิว
-เซียงปิง
-ตงหยุน
-ฮ่านอวี๋
-ไต้ฉิน
-หลี่ลั่ว
-ชิวหลิง
-เหลียนหรง
-หลู่ซัน
-ชิงเยียน
-หลู่เจิ้น
-ชิงโฉว
-จื้อเหวิน
-เผยซาน
-เสี่ยวหลาน
-ชุยซื่อ
-หลู่ฉี
-ยี่ฮ่าน
-อันหยุน
-ลู่เฉียว
-ปิงหลาน
-ชุนซู
-เสี่ยวฟ่าน
-เสี่ยวหลิง
-ลู่เทียน
-อันลู่
-ยี่หลู่
-เซียงเว่ย
-อี้อิงเจิ้น
-ฉางซิว
-เมี๋ยวซู
-หลิงเจิ้น
-เซียงไป๋
-ชุ่นซวง
-เย่ซาน
-ผานชุย
-เมิ่งฉี
-ซานโฉ่ว
-เมี๋ยวชิง
-จื้อเสวีย
-หลิวซู่
-เสี่ยวหลู่
-จินลั่ว
-ลู่จื่อ
-เฟยหลู่
-อิ๋งหรง
-เฟิงล่วน
-เมิ่งไป๋
-เฉียวเฟิง
-เฮิ่นเหอ
-ไป๋ฟ่าน
-จิงเฟิง
-ชูเหยา
-ซินโป
-อิ๋งเยียน
-อวี๋เตี๋ย
-เจ๋อเย่ว
-จื้อยี่
-โม่หลัน
-เหนียนฮ่าน
-ชุ่นเถา
-เย่เทียน
-เฮิ่นเหยา
-หลิงฮุ่ย
-อวี๋เฟิง
-ชุนเหวิน
-จื้อเจิ้น
-ฮวาเจี้ยน
-เสี่ยวหมาน
-ซู่อิ๋ง
-จิงยี่
-ยี่เสวียน
-อิ๋งยี่
-ผานซาน
-ชิรุ่ย
-ฮ่านหลิว
-หลิวฉิน
-เสี่ยวเฉียว
-ชุ่นเหวิน
-หนิงเหมย
-เฮิ่นเฟิง
-อิ๋งเจิ้น
-อวี๋ฝู
-เสี่ยวฟ่าน
-เสวียเฟิง
-ปันเสวีย
-ชูจี้
-ฟางรุ่ย
-เย่หยุน
-ไช่เหวิน
-อิ๋งจื่อ
-อันหนาน
-จื่อโหรว
-ซุ่ยโป
-อันเหลย
-สุยหยุน
-เสี่ยวไป๋
-เฉินซวง
-ยี่เหยา
-หย๋งซุ่ย
-อวี๋หลาน
-ฟ่านซ้ง
-หลันจี้
-ปี้ถง
-เฉียวหลู่
-เหลียนเหลย
-ยี่กู่
-ยี่อวี๋
-ชุยหลาน
-เซียงซาน
-หลิงชุน
-เหนียนซวง
-ไป๋ชิว
-เสี่ยวซวง
-เมิ่งเซียง
-ยี่ไป๋
-เหลียงเหอ
-เซาเหมย
-เหลียนฮ่าน
-จื่อซาน
-ซุ่ยเตี๋ย
-โม่วเว่ย
-เมิ่งหมาน
-เซี่ยถง
-หนงเหลียน
-อ้าวฝู
-มู่ชิง
-ชุนเหมย
-เก้อเฉวี่ย
-ซุ่ยหลาน
-กู่หยุน
-เสี่ยวเซี่ย
-เซียงชุน
-ปี้หมาน
-ยี่หยุน
-ซินเฉียว
-อวี๋ฉิน
-จื่อเถา
-หมานฮ่าน
-เอ๋อเจิ้น
-ฉีซื่อ
-ชูถง
-เทียนเหอ
-ฮาหนาน
-ชูต้าน
-เจี้ยนลั่ว
-อ้าวหยุน
-ซุ่ยหลิว
-มู่เอ๋อ
-เสวียชิง
-ชุ่นเสวีย
-ยี่หนิง
-ฮ่านไป๋
-เอ๋อฝู
-อ้าวซาน
-จื่อเหยา
-เซียนหยุน
-มู่หลิง
-ฟ่านไป๋
-ฮ่านซ้ง
-กู่ผาน
-ซินตง
-ผานหลาน
-ลั่วฮ่าน
-ถิงฉิน
-เสี่ยวเซี่ย
-เมิ่งซ้ง
-เว่ยซิ
-ชุ่นเยียน
-ปิงเซี่ย
-ยี่เมิ่ง
-ชิงยี่
-หลิงเยียน
-ผานเซียง
-ไห่อัน
-หวันหนิง
-หลันหยุน
-ฮวาจิน
-ซื่อหวัน
-เซียงเฉียว
-เฟยหยาง
-ปี้ฉิน
-จื่ออวี๋
-จี้เหยา
-เผยเหวิน
-หนานลู่
-ฉินซิว
-ลู่ฮวา
-ฮวาเยียน
-ต้านชิว
-อวี๋หรง
-มู่หนิง
-ไต้ซวง
-มู่เหมย
-เว่อหนาน
-เฉียนเอ๋อ
-ฮวาซิว
-ยี่เฉียว
-ฮวาจื่อ
-ฮุ่ยโหรว
-ซูอิ๋ง
-ชุยเสวียน
-ต้านเสวีย
-เหนียนหยุน
-เฉียนปิง
-ลู่เฟิง
-เย่วเหยา
-โหย่วเอ๋อ
-เฉียนฮวา
-ฮวนโป
-โม่อิ๋ง
-ฉงหยาง
-ไป๋ซาน
-ชุ่นเจิ้น
-ยี่ซาน
-ไป๋ชิง
-ชุนเฟิง
-ฮวาฝู
-ชุยโหรว
-ซุ่ยซาน
-ตงฮ่าน
-เหลินกัน
-หนิงหยาง
-เหลียนหยุน
-ไห่เหลียน
-โหย่วหลิง
-ลู่ฮวา
-เมี๋ยวซ้ง
-จิงเยียน
-ปินกัน
-เหวินเฟิง
-หย๋าไป๋
-เฟยไป๋
-โร่วหนาน
-หงเสี่ยว
-อวี๋ซาน
-จื่อฮวา
-โถวกู่
-ลู่หนาน
-เหวินหยุน
-ชูชุย
-ยี่ซาน
-ยี่หรง
-ซินโหรว
-ผานเซี่ย
-จื่อเหอ
-กู่หลาน
-ปิงหลาน
-หนิงเยียน
-หย๋าหลู่
-ยี่เสวียน
-ชุนชุย
-หลิงหลัน
-อวี๋เฉียน
-จื่อฮุ่ย
-ชิหยุน
-ตงหลิง
-เหวินหลาน
-หย๋าฉิน
-ชือหลิง
-ซินเจี้ยน
-เซียงเสวียน
-หยวนล่วน
-จื่อเหลย
-เผยปิง
-เสวียหลิว
-ฮ่านหยุน
-หย๋าโหรว
-ยี่ยี่
-ยี่เยียน
-ซาชิง
-ฝูอิ๋ง
-หลิงฮ่าน
-กู่ซื่อ
-ซูซวง
-ชือเซียง
-หย๋ารุ่ย
-เสี่ยวซวง
-ยี่เจิ้น
-ถิงชุน
-หยวนไป๋
-ไห่ลู่
-หมานเหมย
-ปิงเยียน
-ฟ่านโหรว
-เย่วหรง
-มู่ชิง
-หนิงเหอ
-โหย่วหลู่
-เหนียนฉิน
-ชิงเฟิง
-ซุ่ยซาน
-ปันฉิน
-หลู่ไห่
-เหลิงเสวีย
-ฮ่านฮ่าน
-เฟยซ้ง
-โหย่วเฉียว
-ปิงเสวียน
-ซื่อเฉวี่ย
-ซุ่ยเว่ย
-ปิงชุน
-ซิว
-จวน
-อิ๋ง
-ฮวา
-ฮุ่ย
-เฉียว
-เหมย
-น่า
-จิง
-ซู
-ฮุ่ย
-ซู
-ชุย
-หย๋าจื่อ
-อวี๋
-ปิง
-หง
-อี
-หลิง
-เฟิน
-ฟาง
-หยาน
-ไช่
-ชุน
-จู
-หลาน
-เฟิงเจี๋ย
-เหมย
-หลิน
-ซู่
-หยุน
-เหลียน
-เจิ้น
-ฮวน
-เสวีย
-หรง
-อ้าย
-เหมย
-เซี่ย
-เซียงเย่ว
-อิ๋ง
-หยวน
-หยาน
-รุ่ย
-ฟ่าน
-เจี๋ย
-เจี๋ย
-ฉง
-ฉิน
-เจิ้น
-เจิ้น
-หลี่
-กุ่ยตี้
-เย่
-ปี้้
-ลู่
-หย๋า
-ฉี
-จิง
-หยาน
-เฉียน
-ชิว
-ชาน
-ชา
-จิน
-ไต้ชิง
-เฉียน
-ถิง
-เจียว
-หวัน
-เซียน
-จิน
-อิ๋ง
-ลู่
-เหยา
-อี้
-ชาน
-หยาน
-อันหวัน
-อี้
-เหอ
-ต้าน
-หรง
-เหมย
-จุน
-ฉิน
-รุ่ย
-เว่ย
-จิง
-เมิ่ง
-หลาน
-หยวนหยุน
-โหรว
-ซู
-อ้าย
-หนิง
-เสี่ยว
-ฮวน
-เสี่ยว
-เฟิง
-หยุน
-เฟย
-ฮ่าน
-ซิน
-อิ๋ง
-อี้
-หย๋า
-อี้
-เค่อ
-จี๋
-ซู
-อิ๋ง
-หลี่
-จื่อ
-ซื่อ
-หลี่
-ซิว
-เพี่ยว
-อวี๋
-ฝู
-ฉี
-จิง
-หยาน
-เฉียน
-ชิว
-ชาน
-ชา
-จิน
-ไต้
-ชิง
-เฉียน
-ถิง
-หนิง
-อัน
-หวัน
-หยวน
-เจี๋ย
-ซิน
-หยวน
-หยาน
-หยุน
-หรง
-หยวน
-อี้
-หย๋ง
-ชิง
-ฉง
-หลาน
-ชุน
-อวี๋
-เย่ว
-จ้าว
-ปิง
-ซวง
-หวัน
-หมิง
-อวี๋
-ชี
+Nhu Tuyết
+Thiển Tĩnh
+Hàn Lan
+Bạch Tuyết
+Trí Nhã
+Trí Dung
+Linh Nhã
+Dư Tĩnh
+Linh Chi
+Dư Thanh
+Diệp Liễu
+Thuần Bạch
+Nhu Yên
+Thiển Mặc
+Nam Thuần
+Linh Thanh
+Linh Dao
+Lạc Lan
+Phương Phong
+Diệp Dung
+Y Y
+Oánh Thu
+Tương Băng
+Đông Vân
+Hàn Vũ
+Đại Tần
+Lý Lạc
+Thu Linh
+Liên Dung
+Lô Sam
+Thanh Yên
+Lô Trân
+Thanh Sầu
+Trí Văn
+Bồi San
+Tiểu Lan
+Thúy Tự
+Lô Kỳ
+Y Hãn
+An Vân
+Lô Kiều
+Băng Lan
+Thuần Sơ
+Tiểu Phàm
+Tiểu Linh
+Lô Thiên
+An Lộ
+Y Lô
+Tương Vị
+Y Oánh Chấn
+Trường Tú
+Miêu Sơ
+Linh Chấn
+Tương Bạch
+Thuận Sương
+Diệp San
+Phan Thúy
+Mộng Kỳ
+San Sầu
+Miêu Thanh
+Trí Tuyết
+Lưu Tố
+Tiểu Lô
+Kim Lạc
+Lô Tử
+Phi Lô
+Oánh Dung
+Phong Loạn
+Mộng Bạch
+Kiều Phong
+Hận Hà
+Bạch Phàm
+Kinh Phong
+Sơ Dao
+Tân Bạc
+Oánh Yên
+Dư Điệp
+Chiết Nguyệt
+Trí Y
+Mặc Lan
+Niên Hãn
+Thuận Đào
+Diệp Thiên
+Hận Dao
+Linh Huệ
+Dư Phong
+Thuần Văn
+Trí Trân
+Hoa Gian
+Tiểu Mãn
+Tố Oánh
+Kinh Y
+Y Tuyên
+Oánh Y
+Phan San
+Kỳ Thụy
+Hãn Lưu
+Lưu Tần
+Tiểu Kiều
+Thuận Văn
+Ninh Mai
+Hận Phong
+Oánh Chấn
+Dư Phù
+Tiểu Phàm
+Tuyết Phong
+Bàn Tuyết
+Sơ Cơ
+Phương Thụy
+Diệp Vân
+Thái Văn
+Oánh Tử
+An Nam
+Tử Nhu
+Tụy Bạc
+An Lôi
+Tùy Vân
+Tiểu Bạch
+Thần Sương
+Y Dao
+Vĩnh Thụy
+Dư Lan
+Phàm Tùng
+Lan Ký
+Bích Đồng
+Kiều Lô
+Liên Lôi
+Y Cổ
+Y Dư
+Thúy Lan
+Tương San
+Linh Thuần
+Niên Sương
+Bạch Thu
+Tiểu Sương
+Mộng Tương
+Y Bạch
+Lương Hà
+Sào Mai
+Liên Hãn
+Tử San
+Tụy Điệp
+Mặc Vị
+Mộng Mãn
+Hạ Đồng
+Nông Liên
+Ngạo Phù
+Mộc Thanh
+Thuần Mai
+Cách Khuyết
+Tụy Lan
+Cổ Vân
+Tiểu Hạ
+Tương Thuần
+Bích Mãn
+Y Vân
+Tân Kiều
+Dư Cầm
+Tử Đào
+Mãn Hãn
+Nghi Chấn
+Kỳ Tự
+Sơ Đồng
+Thiên Hà
+Hà Nam
+Sơ Đán
+Kiến Lạc
+Ngạo Vân
+Tụy Lưu
+Mộc Nhi
+Tuyết Thanh
+Thuần Tuyết
+Y Ninh
+Hãn Bạch
+Nhi Phù
+Ngạo San
+Tử Dao
+Tiên Vân
+Mộc Linh
+Phàm Bạch
+Hãn Tùng
+Cổ Phan
+Tân Đồng
+Phan Lan
+Lạc Hãn
+Đình Cầm
+Tiểu Hạ
+Mộng Tùng
+Vị Hy
+Thuận Yên
+Băng Hạ
+Y Mộng
+Thanh Y
+Linh Yên
+Phan Tương
+Hải An
+Hoan Ninh
+Lan Vân
+Hoa Cẩm
+Tự Hoan
+Tương Kiều
+Phi Dương
+Bích Cầm
+Tử Dư
+Ký Dao
+Bồi Văn
+Nam Lộ
+Tần Tú
+Lô Hoa
+Hoa Yên
+Đạm Thu
+Dư Dung
+Mộc Ninh
+Đại Sương
+Mộc Mai
+Vô Nan
+Thiển Nhi
+Hoa Tú
+Y Kiều
+Hoa Tử
+Huệ Nhu
+Tô Oánh
+Thúy Huyền
+Đạm Tuyết
+Niên Vân
+Thiển Băng
+Lô Phong
+Nguyệt Dao
+Hữu Nhi
+Thiển Hoa
+Hoan Bạc
+Mặc Oánh
+Sùng Dương
+Bạch San
+Thuận Chấn
+Y San
+Bạch Thanh
+Thuần Phong
+Hoa Phù
+Thúy Nhu
+Tụy San
+Đông Hãn
+Nhẫn Càn
+Ninh Dương
+Liên Vân
+Hải Liên
+Hữu Linh
+Lô Hoa
+Miêu Tùng
+Kinh Yên
+Bân Càn
+Văn Phong
+Nhã Bạch
+Phi Bạch
+Nhu Nam
+Hồng Tiêu
+Dư San
+Tử Hoa
+Thâu Cổ
+Lô Nam
+Văn Vân
+Sơ Thúy
+Y San
+Y Dung
+Tân Nhu
+Phan Hạ
+Tử Hà
+Cổ Lan
+Băng Lan
+Ninh Yên
+Nhã Lô
+Y Tuyên
+Thuần Thúy
+Linh Lan
+Dư Thiển
+Tử Huệ
+Kỳ Vân
+Đông Linh
+Văn Lan
+Nhã Cầm
+Thư Linh
+Tân Kiến
+Tương Tuyên
+Nguyên Loạn
+Tử Lôi
+Bồi Băng
+Tuyết Lưu
+Hãn Vân
+Nhã Nhu
+Y Y
+Y Yên
+Sa Thanh
+Phù Oánh
+Linh Hãn
+Cổ Tự
+Tô Sương
+Thư Tương
+Nhã Thụy
+Tiểu Sương
+Y Chấn
+Đình Thuần
+Nguyên Bạch
+Hải Lộ
+Mãn Mai
+Băng Yên
+Phàm Nhu
+Nguyệt Dung
+Mộc Thanh
+Ninh Hà
+Hữu Lô
+Niên Cầm
+Thanh Phong
+Tụy San
+Bàn Cầm
+Lô Hải
+Lăng Tuyết
+Hãn Hãn
+Phi Tùng
+Hữu Kiều
+Băng Tuyên
+Tự Khuyết
+Tụy Vị
+Băng Thuần
+Tú
+Chuyên
+Oánh
+Hoa
+Huệ
+Kiều
+Mai
+Na
+Kinh
+Tô
+Huệ
+Tô
+Thúy
+Nhã Tử
+Dư
+Băng
+Hồng
+Y
+Linh
+Phân
+Phương
+Yên
+Thái
+Thuần
+Chu
+Lan
+Phong Kiệt
+Mai
+Lâm
+Tố
+Vân
+Liên
+Chấn
+Hoan
+Tuyết
+Dung
+Ái
+Mai
+Hạ
+Tương Nguyệt
+Oánh
+Nguyên
+Yên
+Thụy
+Phàm
+Kiệt
+Kiệt
+Sùng
+Tần
+Chấn
+Chấn
+Lý
+Quỷ Địa
+Diệp
+Bích
+Lộ
+Nhã
+Kỳ
+Kinh
+Yên
+Thiển
+Thu
+San
+Sa
+Kim
+Đại Thanh
+Thiển
+Đình
+Giao
+Hoan
+Tiên
+Kim
+Oánh
+Lộ
+Dao
+Y
+San
+Yên
+An Hoan
+Y
+Hà
+Đạm
+Dung
+Mai
+Tuấn
+Cầm
+Thụy
+Vị
+Kinh
+Mộng
+Lan
+Nguyên Vân
+Nhu
+Tố
+Ái
+Ninh
+Tiểu
+Hoan
+Tiểu
+Phong
+Vân
+Phi
+Hãn
+Tân
+Oánh
+Y
+Nhã
+Y
+Khắc
+Cát
+Tô
+Oánh
+Lý
+Tử
+Tự
+Lý
+Tú
+Phiêu
+Dư
+Phù
+Kỳ
+Kinh
+Yên
+Thiển
+Thu
+San
+Sa
+Kim
+Đại
+Thanh
+Thiển
+Đình
+Ninh
+An
+Hoan
+Nguyên
+Kiệt
+Tân
+Nguyên
+Yên
+Vân
+Dung
+Nguyên
+Y
+Vĩnh
+Thanh
+Sùng
+Lan
+Thuần
+Dư
+Nguyệt
+Triệu
+Băng
+Sương
+Hoan
+Minh
+Dư
+Kỳ
