--- a/Language/Vi/Settings/Display/NpcName/RaceName/Prefix_Human.txt
+++ b/Language/Vi/Settings/Display/NpcName/RaceName/Prefix_Human.txt
@@ -1,504 +1,390 @@
-จ้าว
-เฉียน
-ซุน
-หลี่
-โจว
-อู๋
-เจิ้ง
-หวัง
-เฟิง
-เฉิน
-ชู
-เว่ย
-เจียง
-เซิน
-ฮ่าน
-หยาง
-จู
-ฉิน
-โหย่ว
-ซู
-เฮอ
-หลู่
-ชิ
-จาง
-คง
-โฉว
-หยาน
-ฮวา
-จิน
-เว่ย
-เถา
-เจียง
-ฉี
-เซี่ย
-โซ่ว
-อวี๋
-ไป๋
-สุย
-โต่ว
-จาง
-หยุน
-สุ่ย
-ผาน
-เก้อ
-ชี
-ฟ่าน
-เผิง
-หลาง
-ลู่
-เว่ย
-ฉาง
-ม๋า
-มาว
-เฟิง
-ฮวา
-ฟาง
-อวี๋
-เหริน
-หยวน
-หลิว
-เฟิง
-เปา
-ชิ
-ถาง
-เฟย
-เหลียน
-เซ็น
-เสวีย
-เล่ย
-เฮอ
-หนี่่
-ถาง
-เถิง
-หยิน
-ลั่ว
-ปี้้
-ฮ่าว
-อู๋
-อัน
-ฉาง
-เย่ว
-อวี๋
-ชิ
-ฝู๋
-พี
-เปียน
-ฉี
-คาง
-อู๋
-อวี๋
-หยวน
-ปู้
-กู่
-เมิ่ง
-ปิง
-หวง
-เฮอ
-มู่
-เสี่ยว
-หยิน
-เหยา
-เส้า
-จ้าน
-หวัง
-ฉี
-เหมา
-อวี๋
-ตี้
-มี่
-เป่ย
-หมิง
-ส๋าง
-จี๋
-ฝู๋
-เจิง
-ไต้
-ถาน
-ซ้ง
-เหมา
-ผาง
-สง
-จี๋
-ซู
-ฉวี
-เซียง
-จู
-ตง
-เหลียง
-ตู๋
-หรู่อัน
-หลาน
-หมิน
-ชี
-จี๋
-ม๋า
-เฉียง
-เจี๋ย
-ลู่
-โหลว
-เว่ย
-เจียง
-ถง
-หยาน
-กั๋ว
-เหมย
-เซิง
-หลิน
-เตียว
-จง
-ซู
-ชิว
-ลั่ว
-เกา
-เซี่ย
-ไช่
-เทียน
-ฟ่าน
-หู่
-หลิง
-ฮั่ว
-อวี๋
-หวัน
-จื่อ
-เค่อ
-ซัน
-กวน
-ลู่
-โม่
-จิง
-ฟาง
-ชิว
-มาว
-กัน
-เซี่ย
-หยิง
-ชง
-ติง
-ซวน
-เปิ่น
-เต้ง
-อวี๋
-ชาน
-ฮาง
-หง
-เปา
-จู
-จั้ว
-ชิ
-ชุย
-จี๋
-หนิว
-กง
-เจิง
-จี๋
-ซิง
-ฮวา
-เผย
-ลู่
-หรง
-เหวิง
-ชุ่น
-หยาง
-อวี๋
-ฮุ่ย
-เจิ้น
-ฉวี
-เจี๋ย
-เฟิง
-รุ่ย
-อี้
-ชู
-จิน
-จี๋
-ปิง
-มี่
-ซ้ง
-จิง
-ต้วน
-ฝู๋
-อู๋
-อู๋
-เจียว
-ปา
-กง
-มู่
-ขุย
-ชาน
-กู่
-เฉอ
-โฮ่ว
-มี่
-เผิง
-เฉวียน
-ชี
-ปัน
-หยาง
-ชิว
-จง
-อี้
-กง
-หนิง
-ชิว
-ล่วน
-เปา
-กัน
-โถว
-หลี่
-หรง
-จู
-อู๋
-ฝู๋
-หลิว
-จิง
-จ้าน
-ซู
-หลง
-เย่
-ซิง
-สือ
-เส้า
-เกา
-หลี่
-จี๋
-โป
-หยิน
-ซู่
-ไป๋
-ฮุ่ย
-ผู
-ไท่
-ฉง
-อี
-สั่ว
-เซียน
-จี๋
-ไหล๋
-โจว
-หลิน
-ตู้
-เมิ่ง
-ชือ
-เฉียว
-หยิน
-อวี๋
-ซู
-หน่าย
-ชาง
-ซวง
-เหวิน
-เซิน
-ตาง
-ไจ๋
-ถาน
-กง
-เหลา
-ผาง
-จี๋
-เซิน
-ฝู๋
-ตู๋
-หลัน
-ไจ่
-หลี่
-หย๋ง
-ชี
-ฉวี
-ซาง
-กุ่ย
-ผู
-หนิว
-โสว
-ถง
-เปียน
-หู่
-หยาน
-จี๋
-เจี๋ย
-ผู
-ซ่าง
-หนง
-เหวิน
-เปี๋ย
-จวง
-หยาน
-ชา
-ฉวี
-หยาน
-ชง
-มู่
-เหลียน
-ลู่
-ชี
-ฮวน
-อ้าย
-อวี๋
-หรง
-เซียง
-กู่
-อี้
-เซิน
-เก้อ
-เหลียว
-อวี๋
-จง
-จี๋
-จู
-เหิง
-ปู้
-ตู๋
-เกิ้ง
-หมาน
-หง
-ค่วง
-กั๋ว
-เหวิน
-โค่ว
-กวาง
-ลู่
-เฉวี่ย
-ตง
-โอว
-ซู
-หว๋อ
-หลี่
-อวี๋
-เย่ว
-ขุย
-หลง
-ชิ
-กง
-เฉอ
-เนี่ย
-เฉา
-โก่ว
-อ้าว
-หรง
-เหลิง
-จื้อ
-ซิน
-ข่าน
-น่า
-เจี้ยน
-เล่า
-คง
-เจิง
-อู๋
-ชา
-เนี่ย
-หยาง
-จู
-ซู
-เฟิง
-เฉา
-กวน
-คูอ้าย
-เซียง
-จา
-โฮ่ว
-จิง
-หง
-โหย่ว
-จู
-เฉวียน
-ลู่
-เก้อ
-อี้
-ฮวน
-กง
-โม่ฉี
-สือม๋า
-ซ่างกวน
-โอวหยาง
-เซี่ยโฮ่ว
-จูเก๋อ
-เหวินเหริน
-ตงฟาง
-เหอเหลียน
-หวงฝู๋
-อวี๋ชือ
-กงหยาง
-ถานไท่
-กงเย่
-ชงเจิ้ง
-ผูหยาง
-ชุนอวี๋
-ชานอวี๋
-ไท่ซู
-เซินตู้
-กงซุน
-จงซุน
-ซวนหยวน
-หลิงหู่
-จงหลี่
-อวี๋เหวิน
-จางซุน
-มู่หรง
-เซียนอวี๋
-หลู่ชิว
-สือตู้
-สือคง
-ฉีกวน
-สือโค่ว
-จาง
-ตู๋
-จื้อจู
-ซวนซุน
-ต้วนมู่
-อู๋ม๋า
-กงซิ
-ฉีเตียว
-เย่วเจิ้ง
-หลังสือ
-กงเหลียง
-โถวป้า
-เจี๋ยกู่
-ไจ่ฝู๋
-กู่เหลียง
-จิน
-ชู
-หยาน
-ฟา
-ลู่
-หยาน
-ตู้
-ฉิน
-ต้วนกัน
-ไป๋หลี่
-ตงกั๋ว
-หนานเหมิน
-หู่หยาน
-กุ่ย
-ไห่
-หยางเฉอ
-เว่ยเซิง
-เย่ว
-ซูอ้าย
-โก่ว
-คาง
-ค่วง
-โฮ่ว
-โหย่ว
-ฉิน
-เหลียงชิว
-จั้วชิว
-ตงเหมิน
-ซิเหมิน
-ซ่าง
-โม่ว
-เฉอ
-หน่าย
-โป
-ซ่าง
-หนานกง
-โม่
-ฮา
-เฉียว
-ต๋า
-เหนียน
-อ้าย
-หยาง
-ถง
-ตี้อู๋
-หยาน
-ฝู๋
+Triệu
+Tiền
+Tôn
+Lý
+Chu
+Ngô
+Trịnh
+Vương
+Phùng
+Trần
+Sở
+Vệ
+Tưởng
+Thẩm
+Hàn
+Dương
+Chu
+Tần
+Hữu
+Tô
+Hà
+Lô
+Kỷ
+Trương
+Khổng
+Sở
+Yên
+Hoa
+Kim
+Vệ
+Đào
+Giang
+Kỳ
+Hạ
+Thọ
+Dư
+Bạch
+Tùy
+Đấu
+Trương
+Vân
+Thủy
+Phan
+Cách
+Kỳ
+Phạm
+Bành
+Lang
+Lộ
+Vệ
+Trường
+Mã
+Mâu
+Phong
+Hoa
+Phương
+Dư
+Nhậm
+Nguyên
+Lưu
+Phong
+Bao
+Thạch
+Đường
+Phi
+Liên
+Thiên
+Tuyết
+Lôi
+Hà
+Nghịch
+Đường
+Đằng
+Ân
+Lạc
+Bích
+Hạo
+Vô
+An
+Trường
+Nguyệt
+Dư
+Kỳ
+Phù
+Bỉ
+Biên
+Kỳ
+Khang
+Vô
+Dư
+Nguyên
+Bổ
+Cổ
+Mạnh
+Băng
+Hoàng
+Hà
+Mộc
+Tiểu
+Ân
+Dao
+Thiệu
+Chiến
+Vương
+Kỳ
+Mao
+Dư
+Địch
+Mật
+Bối
+Minh
+Tang
+Cát
+Phù
+Tranh
+Đại
+Đàm
+Tống
+Mao
+Bàng
+Tùng
+Cát
+Tô
+Khúc
+Tương
+Chu
+Đông
+Lương
+Độc
+Như An
+Lan
+Mẫn
+Kỳ
+Cát
+Mã
+Cường
+Kiệt
+Lộ
+Lầu
+Vệ
+Giang
+Đồng
+Yên
+Quách
+Mai
+Sinh
+Lâm
+Điêu
+Chung
+Tô
+Thu
+Lạc
+Cao
+Hạ
+Thái
+Thiên
+Phạm
+Hổ
+Linh
+Hoắc
+Dư
+Hoàn
+Tử
+Khắc
+San
+Quan
+Lộ
+Mặc
+Kinh
+Phương
+Thu
+Mao
+Can
+Hạ
+Oánh
+Xung
+Đinh
+Tuyên
+Bản
+Đặng
+Dư
+San
+Hàng
+Hồng
+Bảo
+Chu
+Trác
+Thạch
+Thúy
+Cát
+Ngưu
+Cung
+Chinh
+Cát
+Tinh
+Hoa
+Bồi
+Lộ
+Dung
+Văn
+Thuận
+Dương
+Dư
+Huệ
+Chấn
+Khúc
+Kiệt
+Phong
+Thụy
+Ý
+Sơ
+Cẩm
+Cát
+Băng
+Mật
+Tùng
+Kinh
+Đoạn
+Phù
+Vô
+Vô
+Giao
+Bát
+Cung
+Mộc
+Khôi
+San
+Cổ
+Triệt
+Hậu
+Mật
+Bành
+Toàn
+Kỳ
+Bán
+Dương
+Thu
+Trọng
+Ý
+Cung
+Ninh
+Thu
+Loạn
+Bảo
+Can
+Đầu
+Lý
+Dung
+Chu
+Vô
+Phù
+Lưu
+Kinh
+Chiến
+Tô
+Long
+Diệp
+Tinh
+Thạch
+Thiếu
+Cao
+Lý
+Cát
+Bạc
+Ân
+Tố
+Bạch
+Huệ
+Phù
+Thái
+Sùng
+Y
+Tỏa
+Tiên
+Cát
+Lai
+Trâu
+Lâm
+Đỗ
+Mạnh
+Thư
+Kiều
+Ân
+Dư
+Tô
+Nại
+Thương
+Sương
+Văn
+Thâm
+Đương
+Trai
+Đàm
+Cung
+Lão
+Bàng
+Cát
+Thân
+Phù
+Độc
+Lan
+Trai
+Lý
+Vĩnh
+Kỳ
+Khúc
+Thượng
+Cung
+Dương
+Đàm
+Thái
+Cung
+Gia
+Trí
+Chu
+Tống
+Huyền Viên
+Lăng Hồ
+Chung Ly
+Dư Văn
+Trương Tôn
+Mộ Dung
+Tiên Dư
+Lô Khâu
+Thạch Đồ
+Thạch Không
+Kỳ Quan
+Thạch Khẩu
+Trương
+Đỗ
+Trí Chu
+Huyền Tôn
+Đoan Mộc
+Vô Mã
+Cung Tây
+Kỳ Điều
+Nguyệt Chính
+Lăng Thạch
+Cung Lương
+Đầu Bả
+Kiệt Cổ
+Tái Phù
+Cổ Lương
+Kim
+Sơ
+Yên
+Pháp
+Lô
+Yên
+Đỗ
+Tần
+Đoan Can
+Bách Lý
+Đông Quách
+Nam Môn
+Hồ Yên
+Quỷ
+Hải
+Dương Chiêu
+Vệ Sinh
+Nguyệt
+Tô Ái
+Cẩu
+Khang
+Khoáng
+Hậu
+Hữu
+Tần
+Lương Khâu
+Trác Khâu
+Đông Môn
+Tây Môn
+Thượng
+Mạc
+Chiêu
+Nãi
+Bạc
+Thượng
+Nam Cung
+Mạc
+Hà
+Kiều
+Đạt
+Niên
+Ái
+Dương
+Đồng
+Đế Vô
+Yên
+Phù
